--- a/jinzounokouzou.html
+++ b/jinzounokouzou.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>個体発生、成長と老化クイズ</title>
+  <title>腎臓の構造クイズ</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -171,7 +171,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>個体発生、成長と老化クイズ</h1>
+    <h1>腎臓の構造クイズ</h1>
     <div id="quiz-container" class="quiz-container">
       <div id="quiz-content">
         <div id="question" class="question"></div>
