--- a/jinzounokouzou.html
+++ b/jinzounokouzou.html
@@ -187,334 +187,279 @@
   <script>
     const quizData = [
 {
-  "question": "始原生殖細胞の由来はどこですか？",
+  "question": "腎臓の形状を最も正確に表しているのはどれですか？",
   "options": [
-    "胚黄嚢の後壁",
-    "精巣の上皮",
-    "子宮内膜",
-    "神経管"
+    "ソラマメ形",
+    "球形",
+    "円筒形",
+    "円盤形"
   ],
   "answer": 0,
-  "explanation": "始原生殖細胞は胚黄嚢の後壁に由来し、胎生4週末以後に性腺原基に進入して生殖細胞に分化します。"
+  "explanation": "腎臓はソラマメのような形をしており、脊柱の左右に位置しています。"
 },
 {
-  "question": "生殖細胞の減数分裂において、最終的にできる細胞の染色体数はどれですか？",
+  "question": "腎臓で尿を濃縮する主な部分はどれですか？",
   "options": [
-    "46本",
-    "23本",
-    "92本",
-    "69本"
-  ],
-  "answer": 1,
-  "explanation": "減数分裂により、染色体数が2n（46本）からn（23本）に減少します。"
-},
-{
-  "question": "精子形成において、1個の精祖細胞からできる精子細胞の数は？",
-  "options": [
-    "1個",
-    "2個",
-    "3個",
-    "4個"
+    "腎盂",
+    "腎杯",
+    "皮質",
+    "髄質"
   ],
   "answer": 3,
-  "explanation": "減数分裂によって1個の精祖細胞から4個の精子細胞が生じます。"
+  "explanation": "髄質は尿を濃縮する主な役割を担い、腎乳頭を経て尿は腎杯に流れ込みます。"
 },
 {
-  "question": "卵子形成において、排卵される直前の細胞はどれですか？",
+  "question": "腎小体の構成要素に含まれるのは次のどれですか？",
   "options": [
-    "一次卵母細胞",
-    "二次卵母細胞",
-    "卵祖細胞",
-    "精子細胞"
+    "ボウマン嚢と尿細管",
+    "ボウマン嚢と糸球体",
+    "腎盂と糸球体",
+    "腎乳頭とボウマン嚢"
   ],
   "answer": 1,
-  "explanation": "卵子形成では、第一減数分裂後に二次卵母細胞が形成され、これが排卵されます。"
+  "explanation": "腎小体は糸球体と、それを包むボウマン嚢から構成されています。"
 },
 {
-  "question": "受精時に精子が卵に進入するために必要な酵素を分泌する部分はどこですか？",
+  "question": "糸球体において血液の濾過を行う主な圧力はどれですか？",
   "options": [
-    "先体",
-    "尾部",
-    "頭部",
-    "精細管"
+    "動脈圧",
+    "ボウマン嚢内圧",
+    "浸透圧",
+    "腎盂圧"
   ],
   "answer": 0,
-  "explanation": "精子の先体から酵素が放出され、卵の透明帯を消化して卵内に進入します。"
+  "explanation": "糸球体では、主に動脈圧を利用して血液が濾過されます。"
 },
 {
-  "question": "受精卵が細胞分裂を繰り返して桑実胚になるのは次のどの過程ですか？",
+  "question": "糸球体で濾過される液体の量は1日にどのくらいですか？",
   "options": [
-    "胚子",
-    "卵割",
-    "栄養膜形成",
-    "羊膜腔形成"
+    "10L",
+    "50L",
+    "100L",
+    "160L"
+  ],
+  "answer": 3,
+  "explanation": "糸球体では1日に約160Lの糸球体濾液が濾過されますが、その大部分は再吸収されます。"
+},
+{
+  "question": "腎臓の機能として正しいのは次のうちどれですか？",
+  "options": [
+    "血液の酸素化",
+    "血液からの老廃物の除去",
+    "栄養の吸収",
+    "ホルモンの分泌"
   ],
   "answer": 1,
-  "explanation": "受精卵が細胞分裂を繰り返し、細胞が集塊状になる過程を卵割といい、最終的に桑実胚と呼ばれるようになります。"
+  "explanation": "腎臓は血液から老廃物を除去し、尿として排出する機能を持っています。"
 },
 {
-  "question": "着床が起こるのは排卵後何日ごろですか？",
+  "question": "尿細管で最も重要な役割を果たすのは次のうちどれですか？",
   "options": [
-    "1日",
-    "3日",
-    "7日",
-    "14日"
+    "糸球体からの濾過",
+    "尿の再吸収と分泌",
+    "血圧の調節",
+    "血漿タンパク質の分泌"
+  ],
+  "answer": 1,
+  "explanation": "尿細管では再吸収と分泌が行われ、糸球体濾液が最終的な尿に変わります。"
+},
+{
+  "question": "糸球体で濾過されにくい物質はどれですか？",
+  "options": [
+    "アミノ酸",
+    "グルコース",
+    "アルブミン",
+    "尿素"
   ],
   "answer": 2,
-  "explanation": "着床は排卵後約1週間で起こります。"
+  "explanation": "アルブミンなどの大きな分子の血漿タンパク質は、糸球体で濾過されにくい物質です。"
 },
 {
-  "question": "胚子において、脊索が形成されるのは次のどの胚葉からですか？",
+  "question": "腎臓内の血液が2回通過する場所はどれですか？",
   "options": [
-    "外胚葉",
-    "内胚葉",
-    "中胚葉",
-    "胚胞"
+    "糸球体と腎盂",
+    "糸球体と尿細管周囲の毛細血管",
+    "尿細管と腎杯",
+    "ボウマン嚢と腎盂"
   ],
-  "answer": 2,
-  "explanation": "脊索は中胚葉から形成され、発生の中心軸をつくります。"
+  "answer": 1,
+  "explanation": "腎臓の血管系では、血液は糸球体と尿細管周囲の毛細血管で2回通過します。"
 },
 {
-  "question": "胎児の血管と母体の血液が直接接触する場所はどこですか？",
+  "question": "腎臓の機能が低下し、老廃物が体内に蓄積して起こる病態は次のどれですか？",
   "options": [
-    "絨毛間腔",
-    "子宮内腔",
-    "卵管膨大部",
-    "卵割腔"
+    "糖尿病",
+    "尿毒症",
+    "高血圧",
+    "貧血"
+  ],
+  "answer": 1,
+  "explanation": "腎臓の機能が低下し、老廃物が体内に蓄積すると尿毒症という重篤な病態が発生します。"
+},
+{
+  "question": "尿細管の最初の分節で、糸球体に続く部分はどれですか？",
+  "options": [
+    "近位尿細管",
+    "ヘンレループ",
+    "遠位尿細管",
+    "集合管"
   ],
   "answer": 0,
-  "explanation": "絨毛間腔で胎児の血管と母体の血液が接触し、酸素と栄養素の交換が行われます。"
+  "explanation": "近位尿細管は糸球体から続く最初の部分で、尿の再吸収が行われます。"
 },
 {
-  "question": "臍帯には通常、何本の血管がありますか？",
+  "question": "ヘンレループの主な役割はどれですか？",
   "options": [
-    "1本",
-    "2本",
-    "3本",
-    "4本"
+    "水と電解質の分泌",
+    "グルコースの再吸収",
+    "尿の濃縮",
+    "老廃物の分泌"
   ],
   "answer": 2,
-  "explanation": "臍帯には2本の臍動脈と1本の臍静脈があります。"
+  "explanation": "ヘンレループでは尿が濃縮され、ナトリウムイオンの再吸収が行われます。"
 },
 {
-  "question": "妊娠中の母体における生理的体重増加はどのくらいですか？",
+  "question": "尿細管のどの部分で、主に水やナトリウムイオンが再吸収されますか？",
   "options": [
-    "3〜5kg",
-    "5〜7kg",
-    "8〜10kg",
-    "12〜15kg"
-  ],
-  "answer": 2,
-  "explanation": "妊娠中の体重増加は主に胎児の成長、子宮の増大、血液や細胞外液の増加などによって生じ、8〜10kg程度の増加が一般的です。"
-},
-{
-  "question": "妊娠末期に仰臥位をとると、失神する可能性がある原因はどれですか？",
-  "options": [
-    "子宮の収縮",
-    "下大静脈の圧迫",
-    "心拍数の低下",
-    "血液の濃縮"
+    "集合管",
+    "近位尿細管",
+    "遠位尿細管",
+    "中間尿細管"
   ],
   "answer": 1,
-  "explanation": "妊娠末期に増大した子宮が下大静脈を圧迫し、静脈血の還流が妨げられることで心拍出量が減少し、仰臥位低血圧症候群が起こることがあります。"
+  "explanation": "近位尿細管では、大部分の水、ナトリウム、グルコースなどが再吸収されます。"
 },
 {
-  "question": "妊娠中の母体の血液循環に関する変化として、正しいのはどれですか？",
+  "question": "集合管の機能に影響を与えるホルモンとして正しいのはどれですか？",
   "options": [
-    "ヘマトクリット値が増加する",
-    "循環血液量が増加する",
-    "赤血球数が増加しない",
-    "心拍出量が減少する"
-  ],
-  "answer": 1,
-  "explanation": "妊娠中、循環血液量は約50%増加します。赤血球数も増加しますが、血漿量の増加がより著しいため、ヘマトクリット値は希釈されて低下します。"
-},
-{
-  "question": "初乳と真乳の違いとして正しいのはどれですか？",
-  "options": [
-    "初乳はカゼインを含む",
-    "初乳は真乳よりも黄色みを帯びる",
-    "初乳は分娩後1か月後に分泌される",
-    "初乳はプロラクチンによって分泌される"
-  ],
-  "answer": 1,
-  "explanation": "初乳は分娩後すぐに分泌され、カゼインを含まず、一般に黄色みを帯びた色をしています。真乳は3〜4日後に分泌されます。"
-},
-{
-  "question": "分娩第2期（娩出期）に起こるのは次のどれですか？",
-  "options": [
-    "羊水が破れる",
-    "外子宮口が全開大する",
-    "胎児が産道を通過する",
-    "胎盤が排出される"
-  ],
-  "answer": 2,
-  "explanation": "分娩第2期は、外子宮口の全開大から胎児の娩出までの期間で、胎児は産道を通って母体外に排出されます。"
-},
-{
-  "question": "胎児の循環において、右心房から左心房に血液を送る迂回路はどれですか？",
-  "options": [
-    "卵円孔",
-    "動脈管",
-    "静脈管",
-    "肺動脈"
-  ],
-  "answer": 0,
-  "explanation": "胎児の血液は右心房から卵円孔を通じて左心房に流れ、肺を迂回して全身に酸素に富んだ血液を送ります。"
-},
-{
-  "question": "胎児の血液がガス交換を行う場所はどこですか？",
-  "options": [
-    "肺",
-    "胎盤",
-    "肝臓",
-    "腎臓"
-  ],
-  "answer": 1,
-  "explanation": "胎児は肺での呼吸を行わず、胎盤で母体の血液とガス交換を行います。"
-},
-{
-  "question": "胎児の血液が動脈管（ボタロ管）を通じて肺を迂回し流れる先はどこですか？",
-  "options": [
-    "上行大動脈",
-    "下行大動脈",
-    "右心房",
-    "左心房"
-  ],
-  "answer": 1,
-  "explanation": "胎児の血液は、右心室から肺動脈幹に送り出され、動脈管を通じて下行大動脈に流れます。"
-},
-{
-  "question": "分娩に関わるホルモンとして、オキシトシンの主な作用はどれですか？",
-  "options": [
-    "子宮頸部の拡張",
-    "陣痛の促進",
-    "乳腺の発育",
-    "胎児の成長"
-  ],
-  "answer": 1,
-  "explanation": "オキシトシンは子宮筋層の収縮を促進し、陣痛を強化する役割を果たします。"
-},
-{
-  "question": "分娩後に胎盤などが排出されるのは分娩のどの時期ですか？",
-  "options": [
-    "分娩第1期",
-    "分娩第2期",
-    "分娩第3期",
-    "分娩終了後24時間以内"
-  ],
-  "answer": 2,
-  "explanation": "分娩第3期は、胎児の娩出後に胎盤などの胎児付属物が排出される期間です。"
-},
-{
-  "question": "成長と発達の違いに関する説明として正しいのはどれですか？",
-  "options": [
-    "成長は機能の向上を指し、発達は容積の増加を指す",
-    "成長は容積・重量の増加を指し、発達は機能や成熟の変化を指す",
-    "成長も発達も同じ意味である",
-    "発達は成人後の変化を指す"
-  ],
-  "answer": 1,
-  "explanation": "成長は身体の容積や重量の増加を指し、発達は機能の成熟や変化を指します。"
-},
-{
-  "question": "成長ホルモンの分泌が増加するのはいつですか？",
-  "options": [
-    "運動時",
-    "覚醒時",
-    "睡眠時",
-    "空腹時"
-  ],
-  "answer": 2,
-  "explanation": "成長ホルモンは睡眠中に分泌が増加し、成長を促進します。"
-},
-{
-  "question": "小児期の成長に大きな影響を与える内部要因として最も重要なものはどれですか？",
-  "options": [
-    "気候",
-    "栄養",
-    "ホルモン",
-    "運動"
-  ],
-  "answer": 2,
-  "explanation": "成長ホルモンや甲状腺ホルモンなど、ホルモンが成長に大きく影響します。"
-},
-{
-  "question": "思春期における男子の二次性徴に含まれないのは次のどれですか？",
-  "options": [
-    "喉頭軟骨の突出",
-    "月経の発来",
-    "陰茎の肥大",
-    "変声（声がわり）"
-  ],
-  "answer": 1,
-  "explanation": "月経の発来は女子の二次性徴の一部であり、男子には起こりません。"
-},
-{
-  "question": "女児における思春期の平均的な開始時期はどれですか？",
-  "options": [
-    "6〜8歳",
-    "9〜12歳",
-    "13〜16歳",
-    "17〜20歳"
-  ],
-  "answer": 1,
-  "explanation": "女児の思春期は9〜12歳ごろに始まり、14〜16歳ごろに終わることが多いです。"
-},
-{
-  "question": "成長に影響を与える外部要因として、次のうち誤っているのはどれですか？",
-  "options": [
-    "栄養",
-    "愛情",
-    "遺伝",
-    "気候"
-  ],
-  "answer": 2,
-  "explanation": "遺伝は内部要因であり、栄養や愛情、気候などは外部要因として成長に影響を与えます。"
-},
-{
-  "question": "加齢により、ホルモンの分泌が激減するのはどのホルモンですか？",
-  "options": [
-    "成長ホルモン",
-    "エストロゲン",
     "インスリン",
-    "テストステロン"
+    "バソプレシン（抗利尿ホルモン）",
+    "アドレナリン",
+    "甲状腺ホルモン"
   ],
   "answer": 1,
-  "explanation": "エストロゲンは女性の閉経後に激減し、さまざまな更年期症状を引き起こします。"
+  "explanation": "バソプレシンは集合管での水の再吸収を調節し、尿の濃縮を助けます。"
 },
 {
-  "question": "テロメアの短縮が関連している老化に関する説は次のうちどれですか？",
+  "question": "グルコースが再吸収される尿細管の部位はどこですか？",
   "options": [
-    "生物時計説",
-    "エラー破綻説",
-    "プログラム説",
-    "フリーラジカル説"
-  ],
-  "answer": 2,
-  "explanation": "プログラム説では、テロメアの短縮が細胞の寿命を制限する役割を果たしているとされています。"
-},
-{
-  "question": "加齢による循環器系の変化として正しいのはどれですか？",
-  "options": [
-    "心拍数が増加する",
-    "心拍出量は安静時に減少する",
-    "動脈壁が厚くなり、伸展性が低下する",
-    "血圧が低下する"
-  ],
-  "answer": 2,
-  "explanation": "加齢に伴い、動脈壁が厚くなり、伸展性が低下するため血圧が上昇しやすくなります。"
-},
-{
-  "question": "老化に伴う骨の変化として最も正しいのはどれですか？",
-  "options": [
-    "骨量が増加する",
-    "骨吸収が促進され、骨粗鬆症になりやすい",
-    "骨のカルシウム濃度が増加する",
-    "骨の成長が止まる"
+    "集合管",
+    "近位尿細管",
+    "ヘンレループ",
+    "遠位尿細管"
   ],
   "answer": 1,
-  "explanation": "加齢によりカルシウムの吸収能力が低下し、骨吸収が促進されるため、骨粗鬆症のリスクが高まります。"
+  "explanation": "グルコースは近位尿細管でほぼ100％再吸収されます。"
+},
+{
+  "question": "尿細管における再吸収の閾値を超えた場合、尿中に排泄される物質の例は次のどれですか？",
+  "options": [
+    "カリウム",
+    "ナトリウム",
+    "グルコース",
+    "アミノ酸"
+  ],
+  "answer": 2,
+  "explanation": "血糖値が高くなり、尿細管の再吸収量が限界を超えると、グルコースが尿中に排泄されます。"
+},
+{
+  "question": "対向流増幅系が関係している尿細管の部分はどれですか？",
+  "options": [
+    "近位尿細管",
+    "遠位尿細管",
+    "集合管",
+    "ヘンレループ"
+  ],
+  "answer": 3,
+  "explanation": "ヘンレループでの対向流増幅系は、尿の濃縮に関与しています。"
+},
+{
+  "question": "アルドステロンの作用で集合管で再吸収が増加するのは次のうちどれですか？",
+  "options": [
+    "カリウム",
+    "ナトリウム",
+    "グルコース",
+    "アミノ酸"
+  ],
+  "answer": 1,
+  "explanation": "アルドステロンはナトリウムの再吸収を促進し、カリウムの排泄を増加させます。"
+},
+{
+  "question": "尿の浸透圧勾配が最も高いのはどの部分ですか？",
+  "options": [
+    "近位尿細管",
+    "集合管",
+    "ヘンレループの下部",
+    "遠位尿細管"
+  ],
+  "answer": 2,
+  "explanation": "ヘンレループの下部では、尿と髄質の浸透圧勾配が最も大きくなり、水の再吸収が行われます。"
+},
+{
+  "question": "副甲状腺ホルモン（パラソルモン）が促進するのはどれですか？",
+  "options": [
+    "カリウムの排泄",
+    "水の再吸収",
+    "カルシウムの再吸収",
+    "グルコースの再吸収"
+  ],
+  "answer": 2,
+  "explanation": "副甲状腺ホルモンは遠位尿細管でカルシウムの再吸収を促進します。"
+},
+{
+  "question": "傍糸球体装置に含まれない細胞はどれですか？",
+  "options": [
+    "顆粒細胞",
+    "緻密斑",
+    "糸球体外メサンギウム細胞",
+    "ボウマン嚢細胞"
+  ],
+  "answer": 3,
+  "explanation": "傍糸球体装置は、顆粒細胞、緻密斑、糸球体外メサンギウム細胞から構成されており、ボウマン嚢細胞は含まれません。"
+},
+{
+  "question": "傍糸球体装置が主に関与するホルモンはどれですか？",
+  "options": [
+    "エリスロポエチン",
+    "レニン",
+    "アルドステロン",
+    "バソプレシン"
+  ],
+  "answer": 1,
+  "explanation": "傍糸球体装置は、血圧を調節するレニンを分泌することで、レニン-アンギオテンシン-アルドステロン系を調節します。"
+},
+{
+  "question": "レニンは血液中でどの物質を変換する酵素ですか？",
+  "options": [
+    "アンギオテンシノーゲンをアンギオテンシンⅠに変換する",
+    "アルブミンをアンギオテンシンⅡに変換する",
+    "アンギオテンシンⅠをアンギオテンシンⅡに変換する",
+    "アルドステロンをバソプレシンに変換する"
+  ],
+  "answer": 0,
+  "explanation": "レニンはアンギオテンシノーゲンをアンギオテンシンⅠに変換し、その後、アンギオテンシンⅠはACEによってアンギオテンシンⅡに変換されます。"
+},
+{
+  "question": "アンギオテンシンⅡの主な作用はどれですか？",
+  "options": [
+    "血糖値の上昇",
+    "血圧の低下",
+    "血管の収縮と血圧の上昇",
+    "尿生成の抑制"
+  ],
+  "answer": 2,
+  "explanation": "アンギオテンシンⅡは強力な血管収縮作用を持ち、血圧を上昇させます。また、副腎皮質からアルドステロンの分泌も促進します。"
+},
+{
+  "question": "レニン-アンギオテンシン-アルドステロン系の調節に関与するホルモンとして正しいのはどれですか？",
+  "options": [
+    "インスリン",
+    "アルドステロン",
+    "エストロゲン",
+    "甲状腺ホルモン"
+  ],
+  "answer": 1,
+  "explanation": "アルドステロンは、レニン-アンギオテンシン-アルドステロン系の一部として、腎臓でナトリウムの再吸収と水の保持を促進し、血圧を上昇させます。"
 }
 ];
 
