--- a/hainyouro.html
+++ b/hainyouro.html
@@ -511,12 +511,12 @@
   "question": "蠕動運動がみられるのはどれか。2つ選べ。",
   "options": [
     "腎動脈",
-    "腎　盂",
+    "糸球体",
     "尿　管",
     "膀　胱",
     "尿　道"
   ],
-  "answer": [1, 2],
+  "answer": 2,
   "explanation": "蠕動運動は尿の移動を助ける運動で、腎盂と尿管にみられます。腎動脈や尿道には蠕動運動はありません。"
 }
 ];
