--- a/hainyouro.html
+++ b/hainyouro.html
@@ -508,7 +508,7 @@
   "explanation": "排尿時には膀胱平滑筋（排尿筋）が収縮し、内尿道括約筋や外尿道括約筋は弛緩します。"
 },
 {
-  "question": "蠕動運動がみられるのはどれか。2つ選べ。",
+  "question": "蠕動運動がみられるのはどれか。",
   "options": [
     "腎動脈",
     "糸球体",
