--- a/hainyouro.html
+++ b/hainyouro.html
@@ -368,9 +368,9 @@
     "2〜3回／日",
     "4〜8回／日（昼間）",
     "0〜1回／日（夜間）",
-    "10回以上／日"
+    "10回以上／日（昼間）"
   ],
-  "answer": 1,
+  "answer": 3,
   "explanation": "昼間の排尿回数は通常4〜8回ですが、これを超える場合は頻尿とされます。"
 },
 {
