--- a/shinkeinokouzou.html
+++ b/shinkeinokouzou.html
@@ -371,7 +371,7 @@
         attendanceLink.style.display = 'block';
         attendanceLink.innerHTML = `
           <p>おめでとうございます！80%以上の正答率です。</p>
-          <a href="https://forms.gle/syg66FRU2DhRsWJs9" target="_blank">出席確認フォームに回答する</a>
+          <a href="https://forms.gle/Yakxq94qMbGc28L47" target="_blank">出席確認フォームに回答する</a>
         `;
       }
     }
