--- a/shinkeinokouzou.html
+++ b/shinkeinokouzou.html
@@ -187,6 +187,171 @@
   <script>
     const quizData = [
 {
+  "question": "中枢神経系の支持細胞として正しいのはどれか。",
+  "options": [
+    "シュワン細胞",
+    "オリゴデンドロサイト",
+    "外套細胞",
+    "線維芽細胞"
+  ],
+  "answer": 1,
+  "explanation": "オリゴデンドロサイトは中枢神経系の支持細胞で、軸索に髄鞘を形成します。シュワン細胞は末梢神経系の支持細胞です。"
+},
+{
+  "question": "シナプスでの興奮の伝達に直接関わる物質はどれか。",
+  "options": [
+    "アクチン",
+    "カリウムイオン",
+    "カルシウムイオン",
+    "グルコース"
+  ],
+  "answer": 2,
+  "explanation": "シナプスでの興奮伝達は、神経終末においてカルシウムイオンの流入によりシナプス小胞から神経伝達物質が放出されることで行われます。"
+},
+{
+  "question": "有髄神経線維の特徴として正しいのはどれか。",
+  "options": [
+    "興奮は軸索全体で均等に伝わる。",
+    "跳躍伝導によって伝導速度が速い。",
+    "髄鞘があることで伝導速度が遅くなる。",
+    "ランヴィエ絞輪は髄鞘のない領域である。"
+  ],
+  "answer": 1,
+  "explanation": "有髄神経線維では、髄鞘の隙間であるランヴィエ絞輪を通じて跳躍伝導が行われるため、伝導速度が速くなります。"
+},
+{
+  "question": "ニューロンの静止電位について正しいのはどれか。",
+  "options": [
+    "静止電位は細胞外が負に帯電している。",
+    "静止電位はおよそ-70〜-60 mVである。",
+    "静止電位は興奮性シナプスでのみ発生する。",
+    "静止電位の変化はシナプス後電位と呼ばれる。"
+  ],
+  "answer": 1,
+  "explanation": "ニューロンの静止電位はおよそ-70〜-60 mVで、細胞内が細胞外に比べて負に帯電している状態を指します。"
+},
+{
+  "question": "軸索の伝導速度が速くなる要因として正しいのはどれか。",
+  "options": [
+    "軸索が細いこと",
+    "無髄神経線維であること",
+    "ランヴィエ絞輪があること",
+    "静止電位が大きいこと"
+  ],
+  "answer": 2,
+  "explanation": "軸索の伝導速度は、ランヴィエ絞輪による跳躍伝導によって速くなります。有髄神経線維で見られる現象です。"
+},
+{
+  "question": "神経伝達物質として興奮性に働くものはどれか。",
+  "options": [
+    "GABA",
+    "グリシン",
+    "グルタミン酸",
+    "セロトニン"
+  ],
+  "answer": 2,
+  "explanation": "グルタミン酸は興奮性の神経伝達物質で、中枢神経で重要な役割を果たしています。GABAやグリシンは抑制性です。"
+},
+{
+  "question": "神経系で興奮の逆戻りが起こらない理由として正しいのはどれか。",
+  "options": [
+    "活動電位は特定の受容体にのみ伝わるから。",
+    "不応期が存在するため。",
+    "髄鞘によって伝達が阻害されるから。",
+    "興奮が伝わる方向はシナプスが決めるから。"
+  ],
+  "answer": 1,
+  "explanation": "Na+チャネルは開いた後すぐに不活化されて閉じ、不応期の間は刺激に反応しないため、興奮が逆戻りすることはありません。"
+},
+{
+  "question": "中枢神経系のグリア細胞のうち、軸索に髄鞘を形成するものはどれか。",
+  "options": [
+    "アストロサイト",
+    "ミクログリア",
+    "シュワン細胞",
+    "オリゴデンドロサイト"
+  ],
+  "answer": 3,
+  "explanation": "中枢神経系のグリア細胞であるオリゴデンドロサイトは、軸索に髄鞘を形成し、伝導速度の向上に寄与します。"
+},
+{
+  "question": "ニューロン間のシナプスにおいて、興奮性シナプス後電位 (EPSP) が生じるときに流入するイオンはどれか。",
+  "options": [
+    "カリウムイオン",
+    "ナトリウムイオン",
+    "塩化物イオン",
+    "カルシウムイオン"
+  ],
+  "answer": 1,
+  "explanation": "興奮性シナプスでは、ナトリウムイオンが流入し、細胞内電位が上昇して脱分極し、EPSPが発生します。"
+},
+{
+  "question": "末梢神経系の髄鞘を形成する細胞はどれか。",
+  "options": [
+    "オリゴデンドロサイト",
+    "シュワン細胞",
+    "アストロサイト",
+    "ミクログリア"
+  ],
+  "answer": 1,
+  "explanation": "末梢神経系の髄鞘を形成するのはシュワン細胞です。オリゴデンドロサイトは中枢神経系で髄鞘を形成します。"
+},
+{
+  "question": "神経伝達物質がシナプス前細胞からシナプス間隙に放出されるメカニズムはどれか。",
+  "options": [
+    "エンドサイトーシス",
+    "ファゴサイトーシス",
+    "エクソサイトーシス",
+    "オートファジー"
+  ],
+  "answer": 2,
+  "explanation": "神経伝達物質は、シナプス小胞がシナプス前膜と融合し、エクソサイトーシスによってシナプス間隙に放出されます。"
+},
+{
+  "question": "活動電位が発生するための閾値とはどれか。",
+  "options": [
+    "膜電位が負の値をとること",
+    "脱分極が一定レベルに達すること",
+    "ナトリウムイオンの排出が起こること",
+    "カリウムイオンの流入が停止すること"
+  ],
+  "answer": 1,
+  "explanation": "活動電位は、膜電位の脱分極が閾値を超えることで発生します。このときNa+チャネルが開き、活動電位が生じます。"
+},
+{
+  "question": "興奮が一方向性で伝わる理由として正しいのはどれか。",
+  "options": [
+    "軸索の先端にのみ興奮が伝わるから。",
+    "活動電位はニューロンの細胞体でのみ発生するから。",
+    "シナプスでの興奮の伝達が一方向性であるから。",
+    "Na+チャネルの活性化が逆方向に抑制されるから。"
+  ],
+  "answer": 2,
+  "explanation": "興奮はシナプスで一方向性に伝達されるため、軸索を通る活動電位も一方向に伝わります。"
+},
+{
+  "question": "神経伝達物質がシナプス後細胞に伝達された後に行うのはどれか。",
+  "options": [
+    "シナプス小胞に再取り込まれる。",
+    "酵素で分解される。",
+    "軸索に蓄積される。",
+    "興奮はそのまま伝わる。"
+  ],
+  "answer": 1,
+  "explanation": "神経伝達物質はシナプス後細胞に伝達された後、シナプス前細胞に再取り込まれたり、酵素で分解されたりします。"
+},
+{
+  "question": "抑制性シナプス後電位 (IPSP) が生じる際に\n関与するイオンはどれか。",
+  "options": [
+    "ナトリウムイオン",
+    "カリウムイオン",
+    "カルシウムイオン",
+    "塩化物イオン"
+  ],
+  "answer": 3,
+  "explanation": "抑制性シナプスでは、塩化物イオンが細胞内に流入し、細胞内電位が下降して過分極し、IPSPが生じます。"
+},
+{
   "question": "末梢神経のうち、脳から出ているものはどれか。",
   "options": [
     "脳神経",
@@ -241,7 +406,8 @@
   "answer": 2,
   "explanation": "中枢神経の灰白質はニューロンの細胞体が集まる部分で、白質は神経線維が多く含まれます。"
 }
-];
+]
+;
 
     let currentQuestion = 0;
     let score = 0;
