--- a/sekizuisinkeitonousinkei.html
+++ b/sekizuisinkeitonousinkei.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>神経の構造クイズ</title>
+  <title> 脊髄神経と脳神経クイズ</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -183,7 +183,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 style="text-align: center;">クイズ</h1>
+    <h1 style="text-align: center;">脊髄神経と脳神経クイズ</h1>
     <div id="quiz-container" class="quiz-container">
       <div id="quiz-content">
         <div id="question" class="question"></div>
@@ -200,224 +200,334 @@
   <script>
     const quizData = [
 {
-  "question": "中枢神経系の支持細胞として正しいのはどれか。",
+  "question": "脊髄神経のうち、最も数が多い神経の区分はどれですか？",
   "options": [
-    "シュワン細胞",
-    "オリゴデンドロサイト",
-    "外套細胞",
-    "線維芽細胞"
+    "頸神経",
+    "胸神経",
+    "腰神経",
+    "仙骨神経"
   ],
   "answer": 1,
-  "explanation": "オリゴデンドロサイトは中枢神経系の支持細胞で、軸索に髄鞘を形成します。シュワン細胞は末梢神経系の支持細胞です。"
+  "explanation": "脊髄神経は31対あり、胸神経は12対で、最も多く分布しています。頸神経は8対、腰神経は5対、仙骨神経も5対です。"
 },
 {
-  "question": "シナプスでの興奮の伝達に直接関わる物質はどれか。",
+  "question": "脊髄の前根に含まれる機能は次のうちどれですか？",
   "options": [
-    "アクチン",
-    "カリウムイオン",
-    "カルシウムイオン",
-    "グルコース"
-  ],
-  "answer": 2,
-  "explanation": "シナプスでの興奮伝達は、神経終末においてカルシウムイオンの流入によりシナプス小胞から神経伝達物質が放出されることで行われます。"
-},
-{
-  "question": "有髄神経線維の特徴として正しいのはどれか。",
-  "options": [
-    "興奮は軸索全体で均等に伝わる。",
-    "跳躍伝導によって伝導速度が速い。",
-    "髄鞘があることで伝導速度が遅くなる。",
-    "ランヴィエ絞輪は髄鞘のない領域である。"
+    "感覚性の軸索",
+    "運動性の軸索",
+    "自律神経の節後線維",
+    "感覚ニューロンの細胞体"
   ],
   "answer": 1,
-  "explanation": "有髄神経線維では、髄鞘の隙間であるランヴィエ絞輪を通じて跳躍伝導が行われるため、伝導速度が速くなります。"
+  "explanation": "前根は、運動ニューロンの軸索や自律神経のニューロンの軸索が通り、筋肉を動かす運動性の情報を伝達します。感覚性の情報は後根を通ります。"
 },
 {
-  "question": "ニューロンの静止電位について正しいのはどれか。",
+  "question": "神経叢を形成せずにそのまま標的に向かう神経はどれですか？",
   "options": [
-    "静止電位は細胞外が負に帯電している。",
-    "静止電位はおよそ-70〜-60 mVである。",
-    "静止電位は興奮性シナプスでのみ発生する。",
-    "静止電位の変化はシナプス後電位と呼ばれる。"
-  ],
-  "answer": 1,
-  "explanation": "ニューロンの静止電位はおよそ-70〜-60 mVで、細胞内が細胞外に比べて負に帯電している状態を指します。"
-},
-{
-  "question": "軸索の伝導速度が速くなる要因として正しいのはどれか。",
-  "options": [
-    "軸索が細いこと",
-    "無髄神経線維であること",
-    "ランヴィエ絞輪があること",
-    "静止電位が大きいこと"
-  ],
-  "answer": 2,
-  "explanation": "軸索の伝導速度は、ランヴィエ絞輪による跳躍伝導によって速くなります。有髄神経線維で見られる現象です。"
-},
-{
-  "question": "神経伝達物質として興奮性に働くものはどれか。",
-  "options": [
-    "GABA",
-    "グリシン",
-    "グルタミン酸",
-    "セロトニン"
-  ],
-  "answer": 2,
-  "explanation": "グルタミン酸は興奮性の神経伝達物質で、中枢神経で重要な役割を果たしています。GABAやグリシンは抑制性です。"
-},
-{
-  "question": "神経系で興奮の逆戻りが起こらない理由として正しいのはどれか。",
-  "options": [
-    "活動電位は特定の受容体にのみ伝わるから。",
-    "不応期が存在するため。",
-    "髄鞘によって伝達が阻害されるから。",
-    "興奮が伝わる方向はシナプスが決めるから。"
-  ],
-  "answer": 1,
-  "explanation": "Na+チャネルは開いた後すぐに不活化されて閉じ、不応期の間は刺激に反応しないため、興奮が逆戻りすることはありません。"
-},
-{
-  "question": "中枢神経系のグリア細胞のうち、軸索に髄鞘を形成するものはどれか。",
-  "options": [
-    "アストロサイト",
-    "ミクログリア",
-    "シュワン細胞",
-    "オリゴデンドロサイト"
+    "腕神経叢",
+    "腰神経叢",
+    "仙骨神経叢",
+    "肋間神経"
   ],
   "answer": 3,
-  "explanation": "中枢神経系のグリア細胞であるオリゴデンドロサイトは、軸索に髄鞘を形成し、伝導速度の向上に寄与します。"
+  "explanation": "肋間神経は、胸神経から出た脊髄神経が神経叢をつくらず、そのまま標的に向かいます。その他の頸神経、腰神経、仙骨神経は神経叢を形成します。"
 },
 {
-  "question": "ニューロン間のシナプスにおいて、興奮性シナプス後電位 (EPSP) が生じるときに流入するイオンはどれか。",
+  "question": "横隔神経が支配する部位は次のうちどれですか？",
   "options": [
-    "カリウムイオン",
-    "ナトリウムイオン",
-    "塩化物イオン",
-    "カルシウムイオン"
-  ],
-  "answer": 1,
-  "explanation": "興奮性シナプスでは、ナトリウムイオンが流入し、細胞内電位が上昇して脱分極し、EPSPが発生します。"
-},
-{
-  "question": "末梢神経系の髄鞘を形成する細胞はどれか。",
-  "options": [
-    "オリゴデンドロサイト",
-    "シュワン細胞",
-    "アストロサイト",
-    "ミクログリア"
-  ],
-  "answer": 1,
-  "explanation": "末梢神経系の髄鞘を形成するのはシュワン細胞です。オリゴデンドロサイトは中枢神経系で髄鞘を形成します。"
-},
-{
-  "question": "神経伝達物質がシナプス前細胞からシナプス間隙に放出されるメカニズムはどれか。",
-  "options": [
-    "エンドサイトーシス",
-    "ファゴサイトーシス",
-    "エクソサイトーシス",
-    "オートファジー"
-  ],
-  "answer": 2,
-  "explanation": "神経伝達物質は、シナプス小胞がシナプス前膜と融合し、エクソサイトーシスによってシナプス間隙に放出されます。"
-},
-{
-  "question": "活動電位が発生するための閾値とはどれか。",
-  "options": [
-    "膜電位が負の値をとること",
-    "脱分極が一定レベルに達すること",
-    "ナトリウムイオンの排出が起こること",
-    "カリウムイオンの流入が停止すること"
-  ],
-  "answer": 1,
-  "explanation": "活動電位は、膜電位の脱分極が閾値を超えることで発生します。このときNa+チャネルが開き、活動電位が生じます。"
-},
-{
-  "question": "興奮が一方向性で伝わる理由として正しいのはどれか。",
-  "options": [
-    "軸索の先端にのみ興奮が伝わるから。",
-    "活動電位はニューロンの細胞体でのみ発生するから。",
-    "シナプスでの興奮の伝達が一方向性であるから。",
-    "Na+チャネルの活性化が逆方向に抑制されるから。"
-  ],
-  "answer": 2,
-  "explanation": "興奮はシナプスで一方向性に伝達されるため、軸索を通る活動電位も一方向に伝わります。"
-},
-{
-  "question": "神経伝達物質がシナプス後細胞に伝達された後に行うのはどれか。",
-  "options": [
-    "シナプス小胞に再取り込まれる。",
-    "酵素で分解される。",
-    "軸索に蓄積される。",
-    "興奮はそのまま伝わる。"
-  ],
-  "answer": 1,
-  "explanation": "神経伝達物質はシナプス後細胞に伝達された後、シナプス前細胞に再取り込まれたり、酵素で分解されたりします。"
-},
-{
-  "question": "抑制性シナプス後電位 (IPSP) が生じる際に\n関与するイオンはどれか。",
-  "options": [
-    "ナトリウムイオン",
-    "カリウムイオン",
-    "カルシウムイオン",
-    "塩化物イオン"
-  ],
-  "answer": 3,
-  "explanation": "抑制性シナプスでは、塩化物イオンが細胞内に流入し、細胞内電位が下降して過分極し、IPSPが生じます。"
-},
-{
-  "question": "末梢神経のうち、脳から出ているものはどれか。",
-  "options": [
-    "脳神経",
-    "脊髄神経",
-    "自律神経",
-    "体性神経"
+    "横隔膜",
+    "胸壁",
+    "大腿部",
+    "殿部"
   ],
   "answer": 0,
-  "explanation": "脳から出ている末梢神経は脳神経であり、12対存在します。脊髄神経は脊柱から出ています。"
+  "explanation": "横隔神経はC3〜C5から出ており、横隔膜の運動を支配しています。これにより呼吸を調整します。"
 },
 {
-  "question": "中枢神経系のうち、脳幹に含まれる部位はどれか。",
+  "question": "坐骨神経が分岐する部位は次のどれですか？",
   "options": [
-    "大脳",
-    "小脳",
-    "中脳",
-    "間脳"
+    "膝窩",
+    "腰椎",
+    "仙骨",
+    "肩甲骨"
   ],
-  "answer": 2,
-  "explanation": "脳幹は中脳、橋、延髄で構成されています。間脳は脳幹に含まれることもありますが、通常は別として扱います。"
+  "answer": 0,
+  "explanation": "坐骨神経は人体で最も大きな神経で、膝窩で脛骨神経と腓骨神経に分かれます。これにより下肢の運動と感覚を支配します。"
 },
 {
-  "question": "中枢神経の灰白質が最も発達している部位はどれか。",
+  "question": "腕神経叢が支配する範囲として正しいのはどれですか？",
   "options": [
-    "脊髄",
-    "大脳皮質",
-    "脳幹",
-    "末梢神経"
+    "下肢",
+    "上肢",
+    "胸壁",
+    "横隔膜"
   ],
   "answer": 1,
-  "explanation": "中枢神経の灰白質は大脳皮質で最も発達しており、多くのニューロンの細胞体が集まっています。"
+  "explanation": "腕神経叢はC5〜T1の脊髄神経の前枝からなり、上肢の筋肉や皮膚を支配しています。"
 },
 {
-  "question": "末梢神経線維のうち、無意識的に情報を伝えるものはどれか。",
+  "question": "感覚ニューロンの細胞体が集まっている部位はどこですか？",
   "options": [
-    "体性神経",
-    "感覚神経線維",
-    "自律神経",
-    "運動神経線維"
+    "前根",
+    "後根",
+    "脊髄神経節",
+    "前角"
   ],
   "answer": 2,
-  "explanation": "自律神経は内臓や血管を支配し、感覚情報や運動指令が無意識的に伝えられます。"
+  "explanation": "感覚ニューロンの細胞体は脊髄神経節に集まっており、ここで感覚情報を処理しています。後根を通って脊髄に入ります。"
 },
 {
-  "question": "中枢神経の組織構造で、ニューロンの細胞体が集まる部分を指すのはどれか。",
+  "question": "脊髄神経の支配する皮膚の領域を何と呼びますか？",
   "options": [
-    "白質",
-    "神経節",
-    "灰白質",
-    "髄鞘"
+    "神経叢",
+    "皮膚分節（デルマトーム）",
+    "筋枝",
+    "自律神経節"
+  ],
+  "answer": 1,
+  "explanation": "皮膚分節（デルマトーム）は、特定の脊髄神経が支配する皮膚の帯状の領域を指します。全身の皮膚はこのように分節的に支配されています。"
+},
+{
+  "question": "大腿神経が支配する部位はどれですか？",
+  "options": [
+    "腕",
+    "下腹部",
+    "大腿前面",
+    "足背"
   ],
   "answer": 2,
-  "explanation": "中枢神経の灰白質はニューロンの細胞体が集まる部分で、白質は神経線維が多く含まれます。"
+  "explanation": "大腿神経は腰神経叢から出て、主に大腿の前面の筋肉や皮膚を支配します。これにより大腿の伸展運動が可能になります。"
+},
+{
+  "question": "頸神経叢が支配する部位として正しいものはどれですか？",
+  "options": [
+    "下肢の皮膚",
+    "肋間の筋肉",
+    "頸部の筋肉と皮膚",
+    "手の筋肉"
+  ],
+  "answer": 2,
+  "explanation": "頸神経叢はC1〜C4の脊髄神経の前枝から成り、頸部の筋肉や皮膚に分布します。また、横隔膜も横隔神経を通じて支配しています。"
+},
+    {
+  "question": "嗅神経（Ⅰ）が支配する感覚はどれですか？",
+  "options": [
+    "視覚",
+    "聴覚",
+    "嗅覚",
+    "平衡感覚"
+  ],
+  "answer": 2,
+  "explanation": "嗅神経は、鼻腔上部の嗅覚受容器からの嗅覚情報を脳に伝える神経です。"
+},
+{
+  "question": "視神経（Ⅱ）が通る頭蓋の構造は次のうちどれですか？",
+  "options": [
+    "篩板",
+    "上眼窩裂",
+    "視神経管",
+    "頸静脈孔"
+  ],
+  "answer": 2,
+  "explanation": "視神経は、眼球の後極から出て視神経管を通り、脳に到達します。"
+},
+{
+  "question": "動眼神経（Ⅲ）が支配する筋は次のうちどれですか？",
+  "options": [
+    "上斜筋",
+    "外側直筋",
+    "下斜筋",
+    "舌筋"
+  ],
+  "answer": 2,
+  "explanation": "動眼神経は、眼球を動かす4つの筋肉（上直筋・内側直筋・下直筋・下斜筋）と上眼瞼挙筋を支配します。"
+},
+{
+  "question": "滑車神経（Ⅳ）が支配する筋は次のうちどれですか？",
+  "options": [
+    "上斜筋",
+    "外側直筋",
+    "上直筋",
+    "内側直筋"
+  ],
+  "answer": 0,
+  "explanation": "滑車神経は、眼球を動かす上斜筋を支配します。"
+},
+{
+  "question": "三叉神経（Ⅴ）は何種類の線維を含んでいますか？",
+  "options": [
+    "体性感覚性",
+    "運動性",
+    "副交感性",
+    "体性感覚性と運動性"
+  ],
+  "answer": 3,
+  "explanation": "三叉神経は、顔面の感覚と咀嚼筋の運動を司るため、体性感覚性と運動性の線維を含んでいます。"
+},
+{
+  "question": "外転神経（Ⅵ）が支配する筋はどれですか？",
+  "options": [
+    "内側直筋",
+    "上斜筋",
+    "外側直筋",
+    "下直筋"
+  ],
+  "answer": 2,
+  "explanation": "外転神経は、眼球を外側に動かす外側直筋を支配します。"
+},
+{
+  "question": "顔面神経（Ⅶ）が支配する機能として正しいのはどれですか？",
+  "options": [
+    "顔面の表情筋と味覚",
+    "視覚",
+    "眼球の運動",
+    "咀嚼筋"
+  ],
+  "answer": 0,
+  "explanation": "顔面神経は、顔面の表情筋、舌の前2/3の味覚、および唾液腺などを支配します。"
+},
+{
+  "question": "内耳神経（Ⅷ）が伝達する感覚は次のどれですか？",
+  "options": [
+    "嗅覚",
+    "視覚",
+    "平衡覚と聴覚",
+    "味覚"
+  ],
+  "answer": 2,
+  "explanation": "内耳神経は、平衡覚（前庭神経）と聴覚（蝸牛神経）の感覚を伝えます。"
+},
+{
+  "question": "舌咽神経（Ⅸ）が支配する器官として正しいものは次のどれですか？",
+  "options": [
+    "横隔膜",
+    "眼球の筋肉",
+    "耳下腺",
+    "舌の前2/3"
+  ],
+  "answer": 2,
+  "explanation": "舌咽神経は、耳下腺の分泌、舌の後1/3の味覚と感覚、咽頭の運動を支配します。"
+},
+{
+  "question": "迷走神経（Ⅹ）が支配する範囲として正しいのはどれですか？",
+  "options": [
+    "上肢の筋肉",
+    "大腿の筋肉",
+    "胸腹部の内臓",
+    "舌の筋肉"
+  ],
+  "answer": 2,
+  "explanation": "迷走神経は、胸部と腹部の内臓に広く分布し、副交感神経として働きます。"
+},
+{
+  "question": "副神経（Ⅺ）が支配する筋はどれですか？",
+  "options": [
+    "外側直筋",
+    "上眼瞼挙筋",
+    "胸鎖乳突筋と僧帽筋",
+    "咀嚼筋"
+  ],
+  "answer": 2,
+  "explanation": "副神経は、胸鎖乳突筋と僧帽筋を支配します。"
+},
+{
+  "question": "舌下神経（Ⅻ）が支配するのは次のうちどの筋ですか？",
+  "options": [
+    "咀嚼筋",
+    "表情筋",
+    "舌筋",
+    "眼球筋"
+  ],
+  "answer": 2,
+  "explanation": "舌下神経は、舌の運動を司る舌筋を支配します。"
+},
+{
+  "question": "顔面の感覚を司る脳神経はどれですか？",
+  "options": [
+    "動眼神経",
+    "滑車神経",
+    "三叉神経",
+    "顔面神経"
+  ],
+  "answer": 2,
+  "explanation": "三叉神経は、顔面の皮膚や粘膜の感覚を司ります。"
+},
+{
+  "question": "視神経の神経線維が交換される構造はどれですか？",
+  "options": [
+    "視交叉",
+    "視索",
+    "視神経管",
+    "視床"
+  ],
+  "answer": 0,
+  "explanation": "視交叉では左右の視神経が交差し、左右の視野からの情報を伝えます。"
+},
+{
+  "question": "動眼神経が支配する瞳孔の筋は次のどれですか？",
+  "options": [
+    "瞳孔散大筋",
+    "瞳孔括約筋",
+    "外側直筋",
+    "下斜筋"
+  ],
+  "answer": 1,
+  "explanation": "動眼神経の副交感神経線維は、瞳孔括約筋を支配し、瞳孔を縮小させます。"
+},
+{
+  "question": "蝸牛神経はどの感覚に関与していますか？",
+  "options": [
+    "平衡覚",
+    "視覚",
+    "聴覚",
+    "嗅覚"
+  ],
+  "answer": 2,
+  "explanation": "蝸牛神経は内耳の蝸牛から聴覚の情報を伝えます。"
+},
+{
+  "question": "舌咽神経が支配する舌の部分はどれですか？",
+  "options": [
+    "舌の前2/3",
+    "舌の後1/3",
+    "舌全体",
+    "舌根"
+  ],
+  "answer": 1,
+  "explanation": "舌咽神経は、舌の後1/3の感覚と味覚を支配します。"
+},
+{
+  "question": "顔面神経の副交感神経成分が支配するのはどの腺ですか？",
+  "options": [
+    "耳下腺",
+    "顎下腺と舌下腺",
+    "乳腺",
+    "汗腺"
+  ],
+  "answer": 1,
+  "explanation": "顔面神経は、顎下腺と舌下腺の分泌を調節します。"
+},
+{
+  "question": "顔面神経麻痺の主な症状は次のどれですか？",
+  "options": [
+    "味覚障害と咀嚼困難",
+    "視覚障害と嗅覚障害",
+    "顔面の表情筋麻痺と味覚障害",
+    "舌の運動障害"
+  ],
+  "answer": 2,
+  "explanation": "顔面神経麻痺では、表情筋の麻痺と舌の前2/3の味覚障害が現れます。"
+},
+{
+  "question": "動眼神経の損傷によって起こる症状はどれですか？",
+  "options": [
+    "瞳孔散大と眼瞼下垂",
+    "眼球運動の増強",
+    "視覚の完全喪失",
+    "聴覚の低下"
+  ],
+  "answer": 0,
+  "explanation": "動眼神経が損傷すると、瞳孔括約筋が働かなくなり瞳孔が散大し、上眼瞼挙筋の麻痺で眼瞼下垂が起こります。"
 }
 ]
 ;
