--- a/nounotougou.html
+++ b/nounotougou.html
@@ -200,334 +200,224 @@
   <script>
     const quizData = [
 {
-  "question": "脊髄神経のうち、最も数が多い神経の区分はどれですか？",
+  "question": "脳波の中で、安静時に出現する波として正しいのはどれですか？",
   "options": [
-    "頸神経",
-    "胸神経",
-    "腰神経",
-    "仙骨神経"
+    "δ波",
+    "α波",
+    "θ波",
+    "β波"
   ],
   "answer": 1,
-  "explanation": "脊髄神経は31対あり、胸神経は12対で、最も多く分布しています。頸神経は8対、腰神経は5対、仙骨神経も5対です。"
+  "explanation": "α波は、安静時や目を閉じているときに出現する脳波で、周波数は8〜13Hzです。β波は、覚醒時や集中しているときに現れ、δ波は熟睡時に、θ波は浅い睡眠時に出現します。"
 },
 {
-  "question": "脊髄の前根に含まれる機能は次のうちどれですか？",
+  "question": "レム睡眠中に観察される現象として正しいものはどれですか？",
   "options": [
-    "感覚性の軸索",
-    "運動性の軸索",
-    "自律神経の節後線維",
-    "感覚ニューロンの細胞体"
+    "眼球が急速に動く",
+    "骨格筋が活発に動く",
+    "呼吸と心拍数が安定する",
+    "脳波が徐波になる"
+  ],
+  "answer": 0,
+  "explanation": "レム睡眠は「急速眼球運動睡眠」とも呼ばれ、眼球が急速に動くのが特徴です。この間、骨格筋は弛緩していますが、大脳皮質は活発に活動しています。"
+},
+{
+  "question": "脳の中で概日リズム（サーカディアンリズム）の中枢が存在する部位はどこですか？",
+  "options": [
+    "松果体",
+    "視交叉上核",
+    "小脳",
+    "海馬"
   ],
   "answer": 1,
-  "explanation": "前根は、運動ニューロンの軸索や自律神経のニューロンの軸索が通り、筋肉を動かす運動性の情報を伝達します。感覚性の情報は後根を通ります。"
+  "explanation": "視交叉上核は視床下部にあり、概日リズムを制御しています。視交叉上核は光の入力を基に体内時計を調節し、ホルモンや体温のリズムを管理します。"
 },
 {
-  "question": "神経叢を形成せずにそのまま標的に向かう神経はどれですか？",
+  "question": "短期記憶と長期記憶の違いとして正しいものはどれですか？",
   "options": [
-    "腕神経叢",
-    "腰神経叢",
-    "仙骨神経叢",
-    "肋間神経"
-  ],
-  "answer": 3,
-  "explanation": "肋間神経は、胸神経から出た脊髄神経が神経叢をつくらず、そのまま標的に向かいます。その他の頸神経、腰神経、仙骨神経は神経叢を形成します。"
-},
-{
-  "question": "横隔神経が支配する部位は次のうちどれですか？",
-  "options": [
-    "横隔膜",
-    "胸壁",
-    "大腿部",
-    "殿部"
-  ],
-  "answer": 0,
-  "explanation": "横隔神経はC3〜C5から出ており、横隔膜の運動を支配しています。これにより呼吸を調整します。"
-},
-{
-  "question": "坐骨神経が分岐する部位は次のどれですか？",
-  "options": [
-    "膝窩",
-    "腰椎",
-    "仙骨",
-    "肩甲骨"
-  ],
-  "answer": 0,
-  "explanation": "坐骨神経は人体で最も大きな神経で、膝窩で脛骨神経と腓骨神経に分かれます。これにより下肢の運動と感覚を支配します。"
-},
-{
-  "question": "腕神経叢が支配する範囲として正しいのはどれですか？",
-  "options": [
-    "下肢",
-    "上肢",
-    "胸壁",
-    "横隔膜"
-  ],
-  "answer": 1,
-  "explanation": "腕神経叢はC5〜T1の脊髄神経の前枝からなり、上肢の筋肉や皮膚を支配しています。"
-},
-{
-  "question": "感覚ニューロンの細胞体が集まっている部位はどこですか？",
-  "options": [
-    "前根",
-    "後根",
-    "脊髄神経節",
-    "前角"
+    "短期記憶は無意識で保存される",
+    "長期記憶は数秒から数分間保存される",
+    "長期記憶は繰り返し学習によって定着する",
+    "短期記憶はエピソード記憶に含まれる"
   ],
   "answer": 2,
-  "explanation": "感覚ニューロンの細胞体は脊髄神経節に集まっており、ここで感覚情報を処理しています。後根を通って脊髄に入ります。"
+  "explanation": "長期記憶は、繰り返し学習や経験によって強化され、エピソード記憶や意味記憶として保存されます。短期記憶は一時的な作業のための記憶で、短期間しか保持されません。"
 },
 {
-  "question": "脊髄神経の支配する皮膚の領域を何と呼びますか？",
+  "question": "情動に関連する部位として、正しいものはどれですか？",
   "options": [
-    "神経叢",
-    "皮膚分節（デルマトーム）",
-    "筋枝",
-    "自律神経節"
-  ],
-  "answer": 1,
-  "explanation": "皮膚分節（デルマトーム）は、特定の脊髄神経が支配する皮膚の帯状の領域を指します。全身の皮膚はこのように分節的に支配されています。"
-},
-{
-  "question": "大腿神経が支配する部位はどれですか？",
-  "options": [
-    "腕",
-    "下腹部",
-    "大腿前面",
-    "足背"
-  ],
-  "answer": 2,
-  "explanation": "大腿神経は腰神経叢から出て、主に大腿の前面の筋肉や皮膚を支配します。これにより大腿の伸展運動が可能になります。"
-},
-{
-  "question": "頸神経叢が支配する部位として正しいものはどれですか？",
-  "options": [
-    "下肢の皮膚",
-    "肋間の筋肉",
-    "頸部の筋肉と皮膚",
-    "手の筋肉"
-  ],
-  "answer": 2,
-  "explanation": "頸神経叢はC1〜C4の脊髄神経の前枝から成り、頸部の筋肉や皮膚に分布します。また、横隔膜も横隔神経を通じて支配しています。"
-},
-    {
-  "question": "嗅神経（Ⅰ）が支配する感覚はどれですか？",
-  "options": [
-    "視覚",
-    "聴覚",
-    "嗅覚",
-    "平衡感覚"
-  ],
-  "answer": 2,
-  "explanation": "嗅神経は、鼻腔上部の嗅覚受容器からの嗅覚情報を脳に伝える神経です。"
-},
-{
-  "question": "視神経（Ⅱ）が通る頭蓋の構造は次のうちどれですか？",
-  "options": [
-    "篩板",
-    "上眼窩裂",
-    "視神経管",
-    "頸静脈孔"
-  ],
-  "answer": 2,
-  "explanation": "視神経は、眼球の後極から出て視神経管を通り、脳に到達します。"
-},
-{
-  "question": "動眼神経（Ⅲ）が支配する筋は次のうちどれですか？",
-  "options": [
-    "上斜筋",
-    "外側直筋",
-    "下斜筋",
-    "舌筋"
-  ],
-  "answer": 2,
-  "explanation": "動眼神経は、眼球を動かす4つの筋肉（上直筋・内側直筋・下直筋・下斜筋）と上眼瞼挙筋を支配します。"
-},
-{
-  "question": "滑車神経（Ⅳ）が支配する筋は次のうちどれですか？",
-  "options": [
-    "上斜筋",
-    "外側直筋",
-    "上直筋",
-    "内側直筋"
-  ],
-  "answer": 0,
-  "explanation": "滑車神経は、眼球を動かす上斜筋を支配します。"
-},
-{
-  "question": "三叉神経（Ⅴ）は何種類の線維を含んでいますか？",
-  "options": [
-    "体性感覚性",
-    "運動性",
-    "副交感性",
-    "体性感覚性と運動性"
-  ],
-  "answer": 3,
-  "explanation": "三叉神経は、顔面の感覚と咀嚼筋の運動を司るため、体性感覚性と運動性の線維を含んでいます。"
-},
-{
-  "question": "外転神経（Ⅵ）が支配する筋はどれですか？",
-  "options": [
-    "内側直筋",
-    "上斜筋",
-    "外側直筋",
-    "下直筋"
-  ],
-  "answer": 2,
-  "explanation": "外転神経は、眼球を外側に動かす外側直筋を支配します。"
-},
-{
-  "question": "顔面神経（Ⅶ）が支配する機能として正しいのはどれですか？",
-  "options": [
-    "顔面の表情筋と味覚",
-    "視覚",
-    "眼球の運動",
-    "咀嚼筋"
-  ],
-  "answer": 0,
-  "explanation": "顔面神経は、顔面の表情筋、舌の前2/3の味覚、および唾液腺などを支配します。"
-},
-{
-  "question": "内耳神経（Ⅷ）が伝達する感覚は次のどれですか？",
-  "options": [
-    "嗅覚",
-    "視覚",
-    "平衡覚と聴覚",
-    "味覚"
-  ],
-  "answer": 2,
-  "explanation": "内耳神経は、平衡覚（前庭神経）と聴覚（蝸牛神経）の感覚を伝えます。"
-},
-{
-  "question": "舌咽神経（Ⅸ）が支配する器官として正しいものは次のどれですか？",
-  "options": [
-    "横隔膜",
-    "眼球の筋肉",
-    "耳下腺",
-    "舌の前2/3"
-  ],
-  "answer": 2,
-  "explanation": "舌咽神経は、耳下腺の分泌、舌の後1/3の味覚と感覚、咽頭の運動を支配します。"
-},
-{
-  "question": "迷走神経（Ⅹ）が支配する範囲として正しいのはどれですか？",
-  "options": [
-    "上肢の筋肉",
-    "大腿の筋肉",
-    "胸腹部の内臓",
-    "舌の筋肉"
-  ],
-  "answer": 2,
-  "explanation": "迷走神経は、胸部と腹部の内臓に広く分布し、副交感神経として働きます。"
-},
-{
-  "question": "副神経（Ⅺ）が支配する筋はどれですか？",
-  "options": [
-    "外側直筋",
-    "上眼瞼挙筋",
-    "胸鎖乳突筋と僧帽筋",
-    "咀嚼筋"
-  ],
-  "answer": 2,
-  "explanation": "副神経は、胸鎖乳突筋と僧帽筋を支配します。"
-},
-{
-  "question": "舌下神経（Ⅻ）が支配するのは次のうちどの筋ですか？",
-  "options": [
-    "咀嚼筋",
-    "表情筋",
-    "舌筋",
-    "眼球筋"
-  ],
-  "answer": 2,
-  "explanation": "舌下神経は、舌の運動を司る舌筋を支配します。"
-},
-{
-  "question": "顔面の感覚を司る脳神経はどれですか？",
-  "options": [
-    "動眼神経",
-    "滑車神経",
-    "三叉神経",
-    "顔面神経"
-  ],
-  "answer": 2,
-  "explanation": "三叉神経は、顔面の皮膚や粘膜の感覚を司ります。"
-},
-{
-  "question": "視神経の神経線維が交換される構造はどれですか？",
-  "options": [
-    "視交叉",
-    "視索",
-    "視神経管",
+    "小脳",
+    "側頭葉",
+    "扁桃体",
     "視床"
   ],
-  "answer": 0,
-  "explanation": "視交叉では左右の視神経が交差し、左右の視野からの情報を伝えます。"
+  "answer": 2,
+  "explanation": "扁桃体は情動に関わる重要な部位で、特に恐怖や怒りの情動を処理します。情動の嫌悪系の中枢ともされており、情動行動に影響を与えます。"
 },
 {
-  "question": "動眼神経が支配する瞳孔の筋は次のどれですか？",
+  "question": "内臓調節を行う自律神経系において、交感神経が作用するとどうなりますか？",
   "options": [
-    "瞳孔散大筋",
-    "瞳孔括約筋",
-    "外側直筋",
-    "下斜筋"
-  ],
-  "answer": 1,
-  "explanation": "動眼神経の副交感神経線維は、瞳孔括約筋を支配し、瞳孔を縮小させます。"
-},
-{
-  "question": "蝸牛神経はどの感覚に関与していますか？",
-  "options": [
-    "平衡覚",
-    "視覚",
-    "聴覚",
-    "嗅覚"
+    "心拍数が減少する",
+    "瞳孔が収縮する",
+    "血圧が上昇する",
+    "気管支が収縮する"
   ],
   "answer": 2,
-  "explanation": "蝸牛神経は内耳の蝸牛から聴覚の情報を伝えます。"
+  "explanation": "交感神経が働くと、心拍数が増加し、血圧が上昇し、気管支が拡張します。これにより、身体は「戦うか逃げるか」の状況に備えます。"
 },
 {
-  "question": "舌咽神経が支配する舌の部分はどれですか？",
+  "question": "摂食行動に関与する中枢がある脳の部位はどれですか？",
   "options": [
-    "舌の前2/3",
-    "舌の後1/3",
-    "舌全体",
-    "舌根"
-  ],
-  "answer": 1,
-  "explanation": "舌咽神経は、舌の後1/3の感覚と味覚を支配します。"
-},
-{
-  "question": "顔面神経の副交感神経成分が支配するのはどの腺ですか？",
-  "options": [
-    "耳下腺",
-    "顎下腺と舌下腺",
-    "乳腺",
-    "汗腺"
-  ],
-  "answer": 1,
-  "explanation": "顔面神経は、顎下腺と舌下腺の分泌を調節します。"
-},
-{
-  "question": "顔面神経麻痺の主な症状は次のどれですか？",
-  "options": [
-    "味覚障害と咀嚼困難",
-    "視覚障害と嗅覚障害",
-    "顔面の表情筋麻痺と味覚障害",
-    "舌の運動障害"
-  ],
-  "answer": 2,
-  "explanation": "顔面神経麻痺では、表情筋の麻痺と舌の前2/3の味覚障害が現れます。"
-},
-{
-  "question": "動眼神経の損傷によって起こる症状はどれですか？",
-  "options": [
-    "瞳孔散大と眼瞼下垂",
-    "眼球運動の増強",
-    "視覚の完全喪失",
-    "聴覚の低下"
+    "視床下部",
+    "小脳",
+    "延髄",
+    "側頭葉"
   ],
   "answer": 0,
-  "explanation": "動眼神経が損傷すると、瞳孔括約筋が働かなくなり瞳孔が散大し、上眼瞼挙筋の麻痺で眼瞼下垂が起こります。"
+  "explanation": "視床下部には摂食行動を促進する摂食中枢と、抑制する満腹中枢が存在します。これらの中枢がエネルギーのバランスを管理し、食欲を調整します。"
+},
+{
+  "question": "脳波の検出に使用される機器の名称はどれですか？",
+  "options": [
+    "心電図",
+    "脳波計",
+    "筋電図",
+    "エコー"
+  ],
+  "answer": 1,
+  "explanation": "脳波計（EEG）は、脳の電気的活動を記録するための装置です。これにより、大脳皮質の活動状態や異常が測定されます。"
+},
+{
+  "question": "情動における報酬系に関与する神経伝達物質はどれですか？",
+  "options": [
+    "ドーパミン",
+    "セロトニン",
+    "ノルアドレナリン",
+    "グルタミン酸"
+  ],
+  "answer": 0,
+  "explanation": "ドーパミンは報酬系に関与する神経伝達物質で、報酬が得られる行動を強化する役割があります。特に、内側前脳束（MFB）の神経回路で活発に働きます。"
+},
+{
+  "question": "概日リズムに影響を与えるホルモンとして正しいものはどれですか？",
+  "options": [
+    "インスリン",
+    "メラトニン",
+    "アドレナリン",
+    "オキシトシン"
+  ],
+  "answer": 1,
+  "explanation": "メラトニンは松果体から分泌され、睡眠と覚醒のリズムを調整するホルモンです。光の刺激に反応して分泌が調整されます。"
+},
+{
+  "question": "視床下部が調節する行動で、飲水行動を促進する要因として正しいものはどれですか？",
+  "options": [
+    "血糖値の低下",
+    "細胞外液の浸透圧の上昇",
+    "体温の低下",
+    "酸素濃度の低下"
+  ],
+  "answer": 1,
+  "explanation": "細胞外液の浸透圧が上昇すると、視床下部が反応して飲水行動を促進します。これにより、体内の水分バランスが調整されます。"
+},
+{
+  "question": "情動に関与する中枢のうち、嫌悪系の中枢はどこにありますか？",
+  "options": [
+    "側頭葉",
+    "扁桃体",
+    "海馬",
+    "視床"
+  ],
+  "answer": 1,
+  "explanation": "扁桃体は、特に恐怖や怒りなどの負の情動を処理する嫌悪系の中枢です。扁桃体の障害により、適切な情動反応ができなくなることがあります。"
+},
+{
+  "question": "短期記憶を司るのは次のどれですか？",
+  "options": [
+    "海馬",
+    "小脳",
+    "延髄",
+    "中脳"
+  ],
+  "answer": 0,
+  "explanation": "海馬は短期記憶の保持や長期記憶への移行に重要な役割を果たします。脳の他の部分と連携して記憶のプロセスを担っています。"
+},
+{
+  "question": "次のうち、成長ホルモンの分泌が増加する時間帯はどれですか？",
+  "options": [
+    "昼間",
+    "深夜の睡眠中",
+    "朝の起床時",
+    "夕方"
+  ],
+  "answer": 1,
+  "explanation": "成長ホルモンは、特に深夜のノンレム睡眠中に分泌されます。このホルモンは細胞の修復や成長を促進します。"
+},
+{
+  "question": "摂食行動に関与するホルモンのうち、満腹感を生じさせるホルモンはどれですか？",
+  "options": [
+    "レプチン",
+    "グルカゴン",
+    "アドレナリン",
+    "プロゲステロン"
+  ],
+  "answer": 0,
+  "explanation": "レプチンは脂肪細胞から分泌され、視床下部に作用して摂食行動を抑制し、満腹感をもたらします。"
+},
+{
+  "question": "次のどの脳波が、熟睡中に観察されるものですか？",
+  "options": [
+    "β波",
+    "α波",
+    "θ波",
+    "δ波"
+  ],
+  "answer": 3,
+  "explanation": "δ波は0.5〜3Hzの周波数を持ち、深いノンレム睡眠時に出現します。この波は脳が最も休息している状態を示します。"
+},
+{
+  "question": "意識レベルを判定する指標として、国際的に用いられているのは次のどれですか？",
+  "options": [
+    "フランク・スケール",
+    "グラスゴー・コーマ・スケール",
+    "スミス・レベル",
+    "ジャパン・レベル・スケール"
+  ],
+  "answer": 1,
+  "explanation": "グラスゴー・コーマ・スケール（GCS）は、開眼、言語反応、運動機能を基に意識障害の程度を数値化する指標です。国際的に広く使用されています。"
+},
+{
+  "question": "防衛反応 (fight and flight) を引き起こすホルモンは次のどれですか？",
+  "options": [
+    "ドーパミン",
+    "アドレナリン",
+    "セロトニン",
+    "オキシトシン"
+  ],
+  "answer": 1,
+  "explanation": "防衛反応（fight and flight）は、危機的状況に備えて交感神経が優位になり、アドレナリンの分泌が促進されることで心拍数や血圧が上昇し、体が即座に対応できる状態になります。"
+},
+{
+  "question": "レム睡眠に関して正しい記述は次のどれですか？",
+  "options": [
+    "脳波は徐波が出現する",
+    "骨格筋は弛緩している",
+    "身体が激しく動く",
+    "夢はほとんど見ない"
+  ],
+  "answer": 1,
+  "explanation": "レム睡眠中は骨格筋が弛緩しており、身体の動きはほとんどありませんが、脳は活動的です。この間、夢を見ることが多いです。"
+},
+{
+  "question": "次のうち、記憶に関与する陳述記憶の一例として正しいものはどれですか？",
+  "options": [
+    "ピアノの演奏技術",
+    "自転車の乗り方",
+    "小学校の卒業式の思い出",
+    "無意識に発現する反射行動"
+  ],
+  "answer": 2,
+  "explanation": "陳述記憶はエピソード記憶や意味記憶に分類され、エピソード記憶は個人的な経験や出来事の記憶を指します。小学校の卒業式の思い出はエピソード記憶の一例です。"
 }
 ]
 ;
