--- a/dendouro.html
+++ b/dendouro.html
@@ -200,334 +200,224 @@
   <script>
     const quizData = [
 {
-  "question": "脊髄神経のうち、最も数が多い神経の区分はどれですか？",
-  "options": [
-    "頸神経",
-    "胸神経",
-    "腰神経",
-    "仙骨神経"
-  ],
-  "answer": 1,
-  "explanation": "脊髄神経は31対あり、胸神経は12対で、最も多く分布しています。頸神経は8対、腰神経は5対、仙骨神経も5対です。"
+"question": "運動ニューロンについて誤っているものはどれか？",
+"options": [
+"α運動ニューロンは筋線維を収縮させる",
+"γ運動ニューロンは筋紡錘を収縮させる",
+"脊髄では後角にある",
+"脳幹では動眼神経などの起始核にある"
+],
+"answer": 2,
+"explanation": "運動ニューロンは脊髄では前角にあります。後角は感覚神経の入力を受ける部分です。α運動ニューロンは筋線維を、γ運動ニューロンは筋紡錘を収縮させ、脳幹では様々な脳神経の起始核に存在します。"
 },
 {
-  "question": "脊髄の前根に含まれる機能は次のうちどれですか？",
-  "options": [
-    "感覚性の軸索",
-    "運動性の軸索",
-    "自律神経の節後線維",
-    "感覚ニューロンの細胞体"
-  ],
-  "answer": 1,
-  "explanation": "前根は、運動ニューロンの軸索や自律神経のニューロンの軸索が通り、筋肉を動かす運動性の情報を伝達します。感覚性の情報は後根を通ります。"
+"question": "錐体路について正しいものはどれか？",
+"options": [
+"延髄上端で交差する",
+"すべての線維が交差する",
+"大脳皮質運動野から始まる",
+"小脳を経由して下行する"
+],
+"answer": 2,
+"explanation": "錐体路は大脳皮質運動野から始まり、内包→大脳脚→橋底部→延髄の錐体を通って下行します。延髄下端の錐体交叉で大部分の線維が交差しますが、一部は交差せず前皮質脊髄路として下行します。小脳は経由しません。"
 },
 {
-  "question": "神経叢を形成せずにそのまま標的に向かう神経はどれですか？",
-  "options": [
-    "腕神経叢",
-    "腰神経叢",
-    "仙骨神経叢",
-    "肋間神経"
-  ],
-  "answer": 3,
-  "explanation": "肋間神経は、胸神経から出た脊髄神経が神経叢をつくらず、そのまま標的に向かいます。その他の頸神経、腰神経、仙骨神経は神経叢を形成します。"
+"question": "感覚の分類について、特殊感覚に含まれないものはどれか？",
+"options": [
+"視覚",
+"触覚",
+"聴覚",
+"嗅覚"
+],
+"answer": 1,
+"explanation": "触覚は体性感覚に分類されます。特殊感覚には、視覚、聴覚、平衡覚、嗅覚、味覚が含まれます。これらは頭部にある特殊な感覚器で受容される感覚です。"
 },
 {
-  "question": "横隔神経が支配する部位は次のうちどれですか？",
-  "options": [
-    "横隔膜",
-    "胸壁",
-    "大腿部",
-    "殿部"
-  ],
-  "answer": 0,
-  "explanation": "横隔神経はC3〜C5から出ており、横隔膜の運動を支配しています。これにより呼吸を調整します。"
+"question": "感覚の性質について正しいものはどれか？",
+"options": [
+"感覚の強さは刺激の差で決まる",
+"感覚の強さは刺激の比で決まる",
+"順応現象は起こらない",
+"後効果は存在しない"
+],
+"answer": 1,
+"explanation": "感覚の強さは刺激の差ではなく比で決まります。例えば1gと2gの違いは、10gと20gの違いに相当します。また、同じ刺激を続けると順応が起こり、その後に後効果が現れることがあります。"
 },
 {
-  "question": "坐骨神経が分岐する部位は次のどれですか？",
-  "options": [
-    "膝窩",
-    "腰椎",
-    "仙骨",
-    "肩甲骨"
-  ],
-  "answer": 0,
-  "explanation": "坐骨神経は人体で最も大きな神経で、膝窩で脛骨神経と腓骨神経に分かれます。これにより下肢の運動と感覚を支配します。"
+"question": "皮膚の感覚受容器について誤っているものはどれか？",
+"options": [
+"マイスネル小体は触覚を感知する",
+"温度受容器は自由神経終末に分布する",
+"痛覚受容器は被覆された特殊な終末である",
+"ファーターパチニ小体は振動を検知する"
+],
+"answer": 2,
+"explanation": "痛覚受容器（侵害受容器）は自由神経終末に分布するイオンチャネルです。被覆された特殊な終末ではありません。これらは温度、カプサイシン、酸など複数の刺激に反応します。"
 },
 {
-  "question": "腕神経叢が支配する範囲として正しいのはどれですか？",
-  "options": [
-    "下肢",
-    "上肢",
-    "胸壁",
-    "横隔膜"
-  ],
-  "answer": 1,
-  "explanation": "腕神経叢はC5〜T1の脊髄神経の前枝からなり、上肢の筋肉や皮膚を支配しています。"
+"question": "深部感覚の受容器について正しいものはどれか？",
+"options": [
+"筋紡錘は筋の張力を検知する",
+"ゴルジ腱器官は筋の長さを検知する",
+"筋紡錘は筋の長さを検知する",
+"どちらも痛覚を検知する"
+],
+"answer": 2,
+"explanation": "筋紡錘は筋の長さ・伸展を検知し、ゴルジ腱器官は筋の張力を検知します。これらの情報により、関節の位置や動きの感覚が生じます。"
 },
 {
-  "question": "感覚ニューロンの細胞体が集まっている部位はどこですか？",
-  "options": [
-    "前根",
-    "後根",
-    "脊髄神経節",
-    "前角"
-  ],
-  "answer": 2,
-  "explanation": "感覚ニューロンの細胞体は脊髄神経節に集まっており、ここで感覚情報を処理しています。後根を通って脊髄に入ります。"
+"question": "感覚点の分布について誤っているものはどれか？",
+"options": [
+"触点は顔や指で最も多い",
+"温点は冷点より多い",
+"痛点が最も多い",
+"大腿部の触点は少ない"
+],
+"answer": 1,
+"explanation": "冷点のほうが温点よりも数が多いことが知られています。また、痛点の数が最も多く、触点は顔や指などの敏感な部位で多く、大腿部などでは少なくなっています。"
 },
 {
-  "question": "脊髄神経の支配する皮膚の領域を何と呼びますか？",
-  "options": [
-    "神経叢",
-    "皮膚分節（デルマトーム）",
-    "筋枝",
-    "自律神経節"
-  ],
-  "answer": 1,
-  "explanation": "皮膚分節（デルマトーム）は、特定の脊髄神経が支配する皮膚の帯状の領域を指します。全身の皮膚はこのように分節的に支配されています。"
+"question": "上行伝導路について正しいものはどれか？",
+"options": [
+"一次ニューロンのみである",
+"常に同側を上行する",
+"複数のニューロンを経由する",
+"運動指令のみを伝える"
+],
+"answer": 2,
+"explanation": "上行伝導路は中枢内で2つ以上のニューロンを経過して大脳皮質に達します。一次、二次、三次ニューロンと呼ばれ、感覚情報を脳に伝えます。また、多くの経路で交差が見られます。"
 },
 {
-  "question": "大腿神経が支配する部位はどれですか？",
-  "options": [
-    "腕",
-    "下腹部",
-    "大腿前面",
-    "足背"
-  ],
-  "answer": 2,
-  "explanation": "大腿神経は腰神経叢から出て、主に大腿の前面の筋肉や皮膚を支配します。これにより大腿の伸展運動が可能になります。"
+"question": "後索-内側毛帯路が伝える感覚はどれか？",
+"options": [
+"粗大な触覚",
+"温度覚",
+"痛覚",
+"精細な触覚"
+],
+"answer": 3,
+"explanation": "後索-内側毛帯路は精細な触覚や筋の伸長状態などの固有感覚を伝える経路です。粗大な触覚は前脊髄視床路、温度覚と痛覚は外側脊髄視床路を通ります。"
 },
 {
-  "question": "頸神経叢が支配する部位として正しいものはどれですか？",
-  "options": [
-    "下肢の皮膚",
-    "肋間の筋肉",
-    "頸部の筋肉と皮膚",
-    "手の筋肉"
-  ],
-  "answer": 2,
-  "explanation": "頸神経叢はC1〜C4の脊髄神経の前枝から成り、頸部の筋肉や皮膚に分布します。また、横隔膜も横隔神経を通じて支配しています。"
-},
-    {
-  "question": "嗅神経（Ⅰ）が支配する感覚はどれですか？",
-  "options": [
-    "視覚",
-    "聴覚",
-    "嗅覚",
-    "平衡感覚"
-  ],
-  "answer": 2,
-  "explanation": "嗅神経は、鼻腔上部の嗅覚受容器からの嗅覚情報を脳に伝える神経です。"
+"question": "視覚伝導路について正しいものはどれか？",
+"options": [
+"すべての視神経が交差する",
+"視交叉で半分の線維が交差する",
+"一次ニューロンは神経節細胞である",
+"視放線は前頭葉に達する"
+],
+"answer": 1,
+"explanation": "視交叉では視神経の半分の線維が交差し、視野の左半からの情報が右脳に、右半からの情報が左脳に集まります。また、視放線は後頭葉の視覚野に達します。"
 },
 {
-  "question": "視神経（Ⅱ）が通る頭蓋の構造は次のうちどれですか？",
-  "options": [
-    "篩板",
-    "上眼窩裂",
-    "視神経管",
-    "頸静脈孔"
-  ],
-  "answer": 2,
-  "explanation": "視神経は、眼球の後極から出て視神経管を通り、脳に到達します。"
+"question": "聴覚伝導路について誤っているものはどれか？",
+"options": [
+"蝸牛神経核で中継される",
+"外側毛帯を上行する",
+"後頭葉に終わる",
+"内側膝状体を経由する"
+],
+"answer": 2,
+"explanation": "聴覚伝導路は側頭葉の聴覚野に終わります。蝸牛神経核、外側毛帯、内側膝状体を経由するのは正しい記述です。"
 },
 {
-  "question": "動眼神経（Ⅲ）が支配する筋は次のうちどれですか？",
-  "options": [
-    "上斜筋",
-    "外側直筋",
-    "下斜筋",
-    "舌筋"
-  ],
-  "answer": 2,
-  "explanation": "動眼神経は、眼球を動かす4つの筋肉（上直筋・内側直筋・下直筋・下斜筋）と上眼瞼挙筋を支配します。"
+"question": "内臓感覚に含まれるものはどれか？",
+"options": [
+"触覚",
+"臓器感覚",
+"視覚",
+"固有感覚"
+],
+"answer": 1,
+"explanation": "内臓感覚には臓器感覚と内臓痛覚が含まれます。触覚は体性感覚、視覚は特殊感覚、固有感覚は体性感覚に分類されます。"
 },
 {
-  "question": "滑車神経（Ⅳ）が支配する筋は次のうちどれですか？",
-  "options": [
-    "上斜筋",
-    "外側直筋",
-    "上直筋",
-    "内側直筋"
-  ],
-  "answer": 0,
-  "explanation": "滑車神経は、眼球を動かす上斜筋を支配します。"
+"question": "順応現象について正しいものはどれか？",
+"options": [
+"刺激が強くなる現象",
+"感覚が強くなる現象",
+"感覚が弱くなる現象",
+"刺激がなくなる現象"
+],
+"answer": 2,
+"explanation": "順応（adaptation）は、同じ感覚刺激を与え続けると感覚が弱くなる現象を指します。これにより、神経系のバランスが崩れると後効果が現れることがあります。"
 },
 {
-  "question": "三叉神経（Ⅴ）は何種類の線維を含んでいますか？",
-  "options": [
-    "体性感覚性",
-    "運動性",
-    "副交感性",
-    "体性感覚性と運動性"
-  ],
-  "answer": 3,
-  "explanation": "三叉神経は、顔面の感覚と咀嚼筋の運動を司るため、体性感覚性と運動性の線維を含んでいます。"
+"question": "皮質核路について正しいものはどれか？",
+"options": [
+"小脳に終わる",
+"脊髄前角に終わる",
+"脳神経の運動ニューロンに終わる",
+"視床に終わる"
+],
+"answer": 2,
+"explanation": "皮質核路は、錐体路と同様の線維ですが、脳幹にある脳神経の運動ニューロンに終わります。これは顔面や咽頭などの随意運動の制御に関与します。"
 },
 {
-  "question": "外転神経（Ⅵ）が支配する筋はどれですか？",
-  "options": [
-    "内側直筋",
-    "上斜筋",
-    "外側直筋",
-    "下直筋"
-  ],
-  "answer": 2,
-  "explanation": "外転神経は、眼球を外側に動かす外側直筋を支配します。"
+"question": "侵害受容器について正しいものはどれか？",
+"options": [
+"振動のみを感知する",
+"複数の刺激に反応する",
+"温度変化には反応しない",
+"被覆された特殊な終末である"
+],
+"answer": 1,
+"explanation": "侵害受容器は43℃以上の温度、カプサイシン、酸（H⁺）など複数の刺激に反応する自由神経終末に分布するイオンチャネルです。"
 },
 {
-  "question": "顔面神経（Ⅶ）が支配する機能として正しいのはどれですか？",
-  "options": [
-    "顔面の表情筋と味覚",
-    "視覚",
-    "眼球の運動",
-    "咀嚼筋"
-  ],
-  "answer": 0,
-  "explanation": "顔面神経は、顔面の表情筋、舌の前2/3の味覚、および唾液腺などを支配します。"
+"question": "体性感覚について誤っているものはどれか？",
+"options": [
+"皮膚感覚を含む",
+"深部感覚を含む",
+"特殊感覚を含む",
+"固有感覚を含む"
+],
+"answer": 2,
+"explanation": "体性感覚には皮膚感覚と深部感覚が含まれ、固有感覚も含まれます。特殊感覚（視覚、聴覚、平衡覚、嗅覚、味覚）は別のカテゴリーです。"
 },
 {
-  "question": "内耳神経（Ⅷ）が伝達する感覚は次のどれですか？",
-  "options": [
-    "嗅覚",
-    "視覚",
-    "平衡覚と聴覚",
-    "味覚"
-  ],
-  "answer": 2,
-  "explanation": "内耳神経は、平衡覚（前庭神経）と聴覚（蝸牛神経）の感覚を伝えます。"
+"question": "外側脊髄視床路が伝える感覚はどれか？",
+"options": [
+"精細な触覚",
+"痛覚と温度覚",
+"粗大な触覚",
+"固有感覚"
+],
+"answer": 1,
+"explanation": "外側脊髄視床路は痛覚と温度覚を伝える経路です。精細な触覚は後索-内側毛帯路、粗大な触覚は前脊髄視床路を通ります。"
 },
 {
-  "question": "舌咽神経（Ⅸ）が支配する器官として正しいものは次のどれですか？",
-  "options": [
-    "横隔膜",
-    "眼球の筋肉",
-    "耳下腺",
-    "舌の前2/3"
-  ],
-  "answer": 2,
-  "explanation": "舌咽神経は、耳下腺の分泌、舌の後1/3の味覚と感覚、咽頭の運動を支配します。"
+"question": "視覚の二次ニューロンはどれか？",
+"options": [
+"視細胞",
+"双極細胞",
+"神経節細胞",
+"外側膝状体細胞"
+],
+"answer": 2,
+"explanation": "視覚の伝導路では、双極細胞が一次ニューロン、神経節細胞が二次ニューロンとなります。神経節細胞の軸索は視神経となります。"
 },
 {
-  "question": "迷走神経（Ⅹ）が支配する範囲として正しいのはどれですか？",
-  "options": [
-    "上肢の筋肉",
-    "大腿の筋肉",
-    "胸腹部の内臓",
-    "舌の筋肉"
-  ],
-  "answer": 2,
-  "explanation": "迷走神経は、胸部と腹部の内臓に広く分布し、副交感神経として働きます。"
+"question": "聴覚伝導路の一次ニューロンの細胞体はどこにあるか？",
+"options": [
+"蝸牛神経核",
+"蝸牛神経節",
+"下丘",
+"内側膝状体"
+],
+"answer": 1,
+"explanation": "聴覚を伝える内耳神経の一次ニューロンは、内耳に近い蝸牛神経節の中にあります。ここから軸索が延び、蝸牛神経核に達します。"
 },
 {
-  "question": "副神経（Ⅺ）が支配する筋はどれですか？",
-  "options": [
-    "外側直筋",
-    "上眼瞼挙筋",
-    "胸鎖乳突筋と僧帽筋",
-    "咀嚼筋"
-  ],
-  "answer": 2,
-  "explanation": "副神経は、胸鎖乳突筋と僧帽筋を支配します。"
-},
-{
-  "question": "舌下神経（Ⅻ）が支配するのは次のうちどの筋ですか？",
-  "options": [
-    "咀嚼筋",
-    "表情筋",
-    "舌筋",
-    "眼球筋"
-  ],
-  "answer": 2,
-  "explanation": "舌下神経は、舌の運動を司る舌筋を支配します。"
-},
-{
-  "question": "顔面の感覚を司る脳神経はどれですか？",
-  "options": [
-    "動眼神経",
-    "滑車神経",
-    "三叉神経",
-    "顔面神経"
-  ],
-  "answer": 2,
-  "explanation": "三叉神経は、顔面の皮膚や粘膜の感覚を司ります。"
-},
-{
-  "question": "視神経の神経線維が交換される構造はどれですか？",
-  "options": [
-    "視交叉",
-    "視索",
-    "視神経管",
-    "視床"
-  ],
-  "answer": 0,
-  "explanation": "視交叉では左右の視神経が交差し、左右の視野からの情報を伝えます。"
-},
-{
-  "question": "動眼神経が支配する瞳孔の筋は次のどれですか？",
-  "options": [
-    "瞳孔散大筋",
-    "瞳孔括約筋",
-    "外側直筋",
-    "下斜筋"
-  ],
-  "answer": 1,
-  "explanation": "動眼神経の副交感神経線維は、瞳孔括約筋を支配し、瞳孔を縮小させます。"
-},
-{
-  "question": "蝸牛神経はどの感覚に関与していますか？",
-  "options": [
-    "平衡覚",
-    "視覚",
-    "聴覚",
-    "嗅覚"
-  ],
-  "answer": 2,
-  "explanation": "蝸牛神経は内耳の蝸牛から聴覚の情報を伝えます。"
-},
-{
-  "question": "舌咽神経が支配する舌の部分はどれですか？",
-  "options": [
-    "舌の前2/3",
-    "舌の後1/3",
-    "舌全体",
-    "舌根"
-  ],
-  "answer": 1,
-  "explanation": "舌咽神経は、舌の後1/3の感覚と味覚を支配します。"
-},
-{
-  "question": "顔面神経の副交感神経成分が支配するのはどの腺ですか？",
-  "options": [
-    "耳下腺",
-    "顎下腺と舌下腺",
-    "乳腺",
-    "汗腺"
-  ],
-  "answer": 1,
-  "explanation": "顔面神経は、顎下腺と舌下腺の分泌を調節します。"
-},
-{
-  "question": "顔面神経麻痺の主な症状は次のどれですか？",
-  "options": [
-    "味覚障害と咀嚼困難",
-    "視覚障害と嗅覚障害",
-    "顔面の表情筋麻痺と味覚障害",
-    "舌の運動障害"
-  ],
-  "answer": 2,
-  "explanation": "顔面神経麻痺では、表情筋の麻痺と舌の前2/3の味覚障害が現れます。"
-},
-{
-  "question": "動眼神経の損傷によって起こる症状はどれですか？",
-  "options": [
-    "瞳孔散大と眼瞼下垂",
-    "眼球運動の増強",
-    "視覚の完全喪失",
-    "聴覚の低下"
-  ],
-  "answer": 0,
-  "explanation": "動眼神経が損傷すると、瞳孔括約筋が働かなくなり瞳孔が散大し、上眼瞼挙筋の麻痺で眼瞼下垂が起こります。"
+"question": "錐体外路症状を引き起こす可能性があるのはどの部位の異常か？",
+"options": [
+"脊髄前角",
+"後索",
+"大脳基底核",
+"後根神経節"
+],
+"answer": 2,
+"explanation": "錐体外路症状は、大脳基底核・小脳からの出力系の異常により生じます。これらの構造は運動の調節に重要な役割を果たしています。"
 }
 ]
 ;
