--- a/me.html
+++ b/me.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> 目クイズ</title>
+  <title> 伝導路クイズ</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -183,7 +184,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 style="text-align: center;">目クイズ</h1>
+    <h1 style="text-align: center;">伝導路クイズ</h1>
     <div id="quiz-container" class="quiz-container">
       <div id="quiz-content">
         <div id="question" class="question"></div>
@@ -199,126 +200,226 @@
   
   <script>
     const quizData = [
-  {
-    "question": "眼球の外層を構成する膜はどれか？",
-    "options": ["網膜", "強膜", "虹彩", "硝子体"],
-    "correct": 1,
-    "explanation": "眼球の外層は強靭なコラーゲン線維からなる強膜で、眼球の約5/6を占めています"
-  },
-  {
-    "question": "光の屈折を調整する役割を持つのはどれか？",
-    "options": ["水晶体", "角膜", "網膜", "硝子体"],
-    "correct": 0,
-    "explanation": "水晶体は遠近調節を行い、光を屈折させて網膜上に像を結ぶ役割を果たしています"
-  },
-  {
-    "question": "瞳孔の大きさを調節する神経はどれか？",
-    "options": ["交感神経", "副交感神経", "視神経", "動眼神経"],
-    "correct": 1,
-    "explanation": "副交感神経は瞳孔括約筋を収縮させ、瞳孔の大きさを調節します"
-  },
-  {
-    "question": "角膜の表面を覆っているのはどれか？",
-    "options": ["単層扁平上皮", "重層扁平上皮", "円柱上皮", "立方上皮"],
-    "correct": 1,
-    "explanation": "角膜の表面は非角化重層扁平上皮で覆われており、強膜の結膜上皮に続いています"
-  },
-  {
-    "question": "眼房水の流出を担う構造はどれか？",
-    "options": ["瞳孔", "毛様体", "強膜静脈洞", "視神経"],
-    "correct": 2,
-    "explanation": "強膜静脈洞（シュレム管）は眼房水の流出部であり、眼内圧の調整に関与します"
-  },
-  {
-    "question": "遠近調節に関わる筋肉はどれか？",
-    "options": ["瞳孔散大筋", "毛様体筋", "眼輪筋", "内側直筋"],
-    "correct": 1,
-    "explanation": "毛様体筋は収縮して水晶体の厚さを調整し、遠近調節を行います"
-  },
-  {
-    "question": "虹彩に存在しない成分はどれか？",
-    "options": ["色素", "血管", "神経", "視細胞"],
-    "correct": 3,
-    "explanation": "虹彩は血管、神経、色素を含みますが、視細胞は含まれていません。視細胞は網膜に存在します"
-  },
-  {
-    "question": "眼球内部を暗くする役割を持つのはどれか？",
-    "options": ["強膜", "脈絡膜", "硝子体", "角膜"],
-    "correct": 1,
-    "explanation": "脈絡膜は血管と色素細胞が豊富で、内部を暗くして眼球壁に栄養を与えます"
-  },
-  {
-    "question": "色覚に関与するのはどれか？",
-    "options": ["視細胞", "毛様体", "瞳孔散大筋", "強膜"],
-    "correct": 0,
-    "explanation": "視細胞は色覚に関与し、特に錐体細胞は色を識別します"
-  },
-  {
-    "question": "光を感じない部分はどれか？",
-    "options": ["黄斑", "中心窩", "視神経乳頭", "虹彩"],
-    "correct": 2,
-    "explanation": "視神経乳頭には視細胞がなく、光を感じないため盲点とも呼ばれます"
-  },
-  {
-    "question": "眼球内の透明なゼリー状の物質はどれか？",
-    "options": ["眼房水", "水晶体", "硝子体", "虹彩"],
-    "correct": 2,
-    "explanation": "硝子体は水晶体の後ろにあり、眼球の大部分を占めるゼリー状の物質です"
-  },
-  {
-    "question": "暗順応に重要な物質はどれか？",
-    "options": ["ロドプシン", "ビタミンD", "アドレナリン", "セロトニン"],
-    "correct": 0,
-    "explanation": "ロドプシンは視細胞内で光を感じ、暗順応に重要な役割を果たします"
-  },
-  {
-    "question": "眼球の運動を調節する神経でないものはどれか？",
-    "options": ["動眼神経", "滑車神経", "外転神経", "視神経"],
-    "correct": 3,
-    "explanation": "視神経は視覚を伝達する神経であり、眼球の運動には関与しません"
-  },
-  {
-    "question": "緑内障の原因となるのはどれか？",
-    "options": ["網膜の損傷", "眼圧の上昇", "水晶体の硬化", "毛様体筋の収縮"],
-    "correct": 1,
-    "explanation": "眼房水の流出が阻害され、眼内圧が上昇することで緑内障が発生します"
-  },
-  {
-    "question": "瞳孔が収縮する反射はどれか？",
-    "options": ["角膜反射", "瞳孔反射", "瞬目反射", "前庭反射"],
-    "correct": 1,
-    "explanation": "瞳孔反射は、光の強さに応じて瞳孔の大きさを調節する反射です"
-  },
-  {
-    "question": "加齢により起こる視覚の変化で正しいのはどれか？",
-    "options": ["ロドプシンの増加", "水晶体の柔軟性の低下", "視神経の太さの増加", "硝子体の硬化"],
-    "correct": 1,
-    "explanation": "加齢により水晶体が硬くなり、遠近調節が困難になる現象を老視と呼びます"
-  },
-  {
-    "question": "涙液を鼻腔へと導く管はどれか？",
-    "options": ["涙管", "鼻涙管", "涙点", "涙腺"],
-    "correct": 1,
-    "explanation": "涙液は鼻涙管を通って鼻腔の下鼻道に流れ込みます"
-  },
-  {
-    "question": "視力1.0の人が識別できる最小の視角はどれか？",
-    "options": ["1度", "30分", "1分", "0.1度"],
-    "correct": 2,
-    "explanation": "視力1.0は、1分角の視角を識別できる能力を指します"
-  },
-  {
-    "question": "中心窩の特徴として正しいのはどれか？",
-    "options": ["錐体が密集している", "杆体が密集している", "神経線維が密集している", "色素細胞が多い"],
-    "correct": 0,
-    "explanation": "中心窩は錐体が集まっており、視力が最も高くなる部分です"
-  },
-  {
-    "question": "夜盲症の原因となるビタミン欠乏はどれか？",
-    "options": ["ビタミンA", "ビタミンB", "ビタミンC", "ビタミンD"],
-    "correct": 0,
-    "explanation": "ビタミンAはロドプシンの生成に関与し、欠乏すると夜盲症（鳥目）になります"
-  }
+{
+"question": "運動ニューロンについて誤っているものはどれか？",
+"options": [
+"α運動ニューロンは筋線維を収縮させる",
+"γ運動ニューロンは筋紡錘を収縮させる",
+"脊髄では後角にある",
+"脳幹では動眼神経などの起始核にある"
+],
+"answer": 2,
+"explanation": "運動ニューロンは脊髄では前角にあります。後角は感覚神経の入力を受ける部分です。α運動ニューロンは筋線維を、γ運動ニューロンは筋紡錘を収縮させ、脳幹では様々な脳神経の起始核に存在します。"
+},
+{
+"question": "錐体路について正しいものはどれか？",
+"options": [
+"延髄上端で交差する",
+"すべての線維が交差する",
+"大脳皮質運動野から始まる",
+"小脳を経由して下行する"
+],
+"answer": 2,
+"explanation": "錐体路は大脳皮質運動野から始まり、内包→大脳脚→橋底部→延髄の錐体を通って下行します。延髄下端の錐体交叉で大部分の線維が交差しますが、一部は交差せず前皮質脊髄路として下行します。小脳は経由しません。"
+},
+{
+"question": "感覚の分類について、特殊感覚に含まれないものはどれか？",
+"options": [
+"視覚",
+"触覚",
+"聴覚",
+"嗅覚"
+],
+"answer": 1,
+"explanation": "触覚は体性感覚に分類されます。特殊感覚には、視覚、聴覚、平衡覚、嗅覚、味覚が含まれます。これらは頭部にある特殊な感覚器で受容される感覚です。"
+},
+{
+"question": "感覚の性質について正しいものはどれか？",
+"options": [
+"感覚の強さは刺激の差で決まる",
+"感覚の強さは刺激の比で決まる",
+"順応現象は起こらない",
+"後効果は存在しない"
+],
+"answer": 1,
+"explanation": "感覚の強さは刺激の差ではなく比で決まります。例えば1gと2gの違いは、10gと20gの違いに相当します。また、同じ刺激を続けると順応が起こり、その後に後効果が現れることがあります。"
+},
+{
+"question": "皮膚の感覚受容器について誤っているものはどれか？",
+"options": [
+"マイスネル小体は触覚を感知する",
+"温度受容器は自由神経終末に分布する",
+"痛覚受容器は被覆された特殊な終末である",
+"ファーターパチニ小体は振動を検知する"
+],
+"answer": 2,
+"explanation": "痛覚受容器（侵害受容器）は自由神経終末に分布するイオンチャネルです。被覆された特殊な終末ではありません。これらは温度、カプサイシン、酸など複数の刺激に反応します。"
+},
+{
+"question": "深部感覚の受容器について正しいものはどれか？",
+"options": [
+"筋紡錘は筋の張力を検知する",
+"ゴルジ腱器官は筋の長さを検知する",
+"筋紡錘は筋の長さを検知する",
+"どちらも痛覚を検知する"
+],
+"answer": 2,
+"explanation": "筋紡錘は筋の長さ・伸展を検知し、ゴルジ腱器官は筋の張力を検知します。これらの情報により、関節の位置や動きの感覚が生じます。"
+},
+{
+"question": "感覚点の分布について誤っているものはどれか？",
+"options": [
+"触点は顔や指で最も多い",
+"温点は冷点より多い",
+"痛点が最も多い",
+"大腿部の触点は少ない"
+],
+"answer": 1,
+"explanation": "冷点のほうが温点よりも数が多いことが知られています。また、痛点の数が最も多く、触点は顔や指などの敏感な部位で多く、大腿部などでは少なくなっています。"
+},
+{
+"question": "上行伝導路について正しいものはどれか？",
+"options": [
+"一次ニューロンのみである",
+"常に同側を上行する",
+"複数のニューロンを経由する",
+"運動指令のみを伝える"
+],
+"answer": 2,
+"explanation": "上行伝導路は中枢内で2つ以上のニューロンを経過して大脳皮質に達します。一次、二次、三次ニューロンと呼ばれ、感覚情報を脳に伝えます。また、多くの経路で交差が見られます。"
+},
+{
+"question": "後索-内側毛帯路が伝える感覚はどれか？",
+"options": [
+"粗大な触覚",
+"温度覚",
+"痛覚",
+"精細な触覚"
+],
+"answer": 3,
+"explanation": "後索-内側毛帯路は精細な触覚や筋の伸長状態などの固有感覚を伝える経路です。粗大な触覚は前脊髄視床路、温度覚と痛覚は外側脊髄視床路を通ります。"
+},
+{
+"question": "視覚伝導路について正しいものはどれか？",
+"options": [
+"すべての視神経が交差する",
+"視交叉で半分の線維が交差する",
+"一次ニューロンは神経節細胞である",
+"視放線は前頭葉に達する"
+],
+"answer": 1,
+"explanation": "視交叉では視神経の半分の線維が交差し、視野の左半からの情報が右脳に、右半からの情報が左脳に集まります。また、視放線は後頭葉の視覚野に達します。"
+},
+{
+"question": "聴覚伝導路について誤っているものはどれか？",
+"options": [
+"蝸牛神経核で中継される",
+"外側毛帯を上行する",
+"後頭葉に終わる",
+"内側膝状体を経由する"
+],
+"answer": 2,
+"explanation": "聴覚伝導路は側頭葉の聴覚野に終わります。蝸牛神経核、外側毛帯、内側膝状体を経由するのは正しい記述です。"
+},
+{
+"question": "内臓感覚に含まれるものはどれか？",
+"options": [
+"触覚",
+"臓器感覚",
+"視覚",
+"固有感覚"
+],
+"answer": 1,
+"explanation": "内臓感覚には臓器感覚と内臓痛覚が含まれます。触覚は体性感覚、視覚は特殊感覚、固有感覚は体性感覚に分類されます。"
+},
+{
+"question": "順応現象について正しいものはどれか？",
+"options": [
+"刺激が強くなる現象",
+"感覚が強くなる現象",
+"感覚が弱くなる現象",
+"刺激がなくなる現象"
+],
+"answer": 2,
+"explanation": "順応（adaptation）は、同じ感覚刺激を与え続けると感覚が弱くなる現象を指します。これにより、神経系のバランスが崩れると後効果が現れることがあります。"
+},
+{
+"question": "皮質核路について正しいものはどれか？",
+"options": [
+"小脳に終わる",
+"脊髄前角に終わる",
+"脳神経の運動ニューロンに終わる",
+"視床に終わる"
+],
+"answer": 2,
+"explanation": "皮質核路は、錐体路と同様の線維ですが、脳幹にある脳神経の運動ニューロンに終わります。これは顔面や咽頭などの随意運動の制御に関与します。"
+},
+{
+"question": "侵害受容器について正しいものはどれか？",
+"options": [
+"振動のみを感知する",
+"複数の刺激に反応する",
+"温度変化には反応しない",
+"被覆された特殊な終末である"
+],
+"answer": 1,
+"explanation": "侵害受容器は43℃以上の温度、カプサイシン、酸（H⁺）など複数の刺激に反応する自由神経終末に分布するイオンチャネルです。"
+},
+{
+"question": "体性感覚について誤っているものはどれか？",
+"options": [
+"皮膚感覚を含む",
+"深部感覚を含む",
+"特殊感覚を含む",
+"固有感覚を含む"
+],
+"answer": 2,
+"explanation": "体性感覚には皮膚感覚と深部感覚が含まれ、固有感覚も含まれます。特殊感覚（視覚、聴覚、平衡覚、嗅覚、味覚）は別のカテゴリーです。"
+},
+{
+"question": "外側脊髄視床路が伝える感覚はどれか？",
+"options": [
+"精細な触覚",
+"痛覚と温度覚",
+"粗大な触覚",
+"固有感覚"
+],
+"answer": 1,
+"explanation": "外側脊髄視床路は痛覚と温度覚を伝える経路です。精細な触覚は後索-内側毛帯路、粗大な触覚は前脊髄視床路を通ります。"
+},
+{
+"question": "視覚の二次ニューロンはどれか？",
+"options": [
+"視細胞",
+"双極細胞",
+"神経節細胞",
+"外側膝状体細胞"
+],
+"answer": 2,
+"explanation": "視覚の伝導路では、双極細胞が一次ニューロン、神経節細胞が二次ニューロンとなります。神経節細胞の軸索は視神経となります。"
+},
+{
+"question": "聴覚伝導路の一次ニューロンの細胞体はどこにあるか？",
+"options": [
+"蝸牛神経核",
+"蝸牛神経節",
+"下丘",
+"内側膝状体"
+],
+"answer": 1,
+"explanation": "聴覚を伝える内耳神経の一次ニューロンは、内耳に近い蝸牛神経節の中にあります。ここから軸索が延び、蝸牛神経核に達します。"
+},
+{
+"question": "錐体外路症状を引き起こす可能性があるのはどの部位の異常か？",
+"options": [
+"脊髄前角",
+"後索",
+"大脳基底核",
+"後根神経節"
+],
+"answer": 2,
+"explanation": "錐体外路症状は、大脳基底核・小脳からの出力系の異常により生じます。これらの構造は運動の調節に重要な役割を果たしています。"
+}
 ]
 ;
 
@@ -488,7 +589,7 @@ function loadQuestion() {
         attendanceLink.style.display = 'block';
         attendanceLink.innerHTML = `
           <p>おめでとうございます！80%以上の正答率です。</p>
-          <a href="https://forms.gle/wfnLJKmbQWMM5WP1A" target="_blank">出席確認フォームに回答する</a>
+          <a href="https://forms.gle/9YBLTaRdjjmTEjAh9" target="_blank">出席確認フォームに回答する</a>
         `;
       }
     }
